Published multiple files

--- a/src/site/notes/Calendrier/Semaines/2024-15.md
+++ b/src/site/notes/Calendrier/Semaines/2024-15.md
@@ -1,85 +1,85 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-15/","title":"Cette Semaine","tags":[null]}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-15/","title":"Cette semaine","tags":[null]}
 ---
 
 
-# Cette Semaine
+# Cette semaine
 
 ## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
-# Segment 1 & 2 : Cinéma & Séries TV
 
-## 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                             | rating | review                                                                                                                  |
-| -------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/DataOps - Mais qu’est-ce que cest\|DataOps - Mais qu’est-ce que cest]]                               | \-     | Une vidéo vraiment sympa pour une explication simple et rapide de la DataOps                                            |
-| [[Sources/Ce que j'ai vu/OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint\|OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint]] | \-     | Comment faire des slides sur Obsidian une vidéo très sympa pour vous présenter cette fonctionnalité de base du logiciel |
+## Segment 1 & 2 : Cinéma & Séries TV
 
-{ .block-language-dataview}
+### 🍿 Cette Semaine, J'ai Vu
 
-# Segment 3 : Culture Littéraire & Articles
-
-## 📚 Cette Semaine, J'ai Lu
-
-| File                                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                                                                                                                                  |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science\|60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science]] | 🟡     | Je m'attendais à une réfutation globale du paranormal, mais c'est plus mitigé que cela, le livre donne à penser que l'auteur serait prête a admettre le paranormal si les expériences menées sont bien réalisées et documentées. Il y a des points vraiment intréessant et d'autres assez amusant. Au final c'est quand même un peu rapide et un peu court mais c'est aussi expliqué dans le Nota Bene. |
-| [[Sources/Ce que j'ai lu/Harry Dickson tome 09\|Harry Dickson tome 09]]                                                                                                                         | 🟡     | Du plaisir à le lire même si on retrouve les mêmes trames et que je trouve les nouvelles moins travaillées que d'autres                                                                                                                                                                                                                                                                                 |
-| [[Sources/Ce que j'ai lu/GitLab - Comment bien gérer ses projets\|GitLab - Comment bien gérer ses projets]]                                                                                     | \-     | Doc sympa sur l'explication des bonnes pratiques de gestion des projets avec un gestionnaire de source, ici GitLab                                                                                                                                                                                                                                                                                      |
+| file.name                                        | rating | source                                      |
+| ------------------------------------------------ | ------ | ------------------------------------------- |
+| DataOps - Mais qu’est-ce que cest                | \-     | https://www.youtube.com/watch?v=lhU9yH1AW0U |
+| OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint | \-     | https://www.youtube.com/watch?v=25mDwXZgwTM |
 
 { .block-language-dataview}
 
-# Segment 4 : Podcasts Et Musiques
+## Segment 3 : Culture Littéraire & Articles
 
-## 🎧 Cette Semaine, J'ai Écouté
+### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                       |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Event Horizon - Orbital\|Event Horizon - Orbital]]                                                                                                                                                   | \-     | \-                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict\|Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict]]                 | \-     | J'ai pas compris ce que j'ai écouté                                                                                                                                                                                                                                          |
-| [[Sources/Ce que j'ai écouté/Lair de rien - 014 - Des petits bruits - Podcast Addict\|Lair de rien - 014 - Des petits bruits - Podcast Addict]]                                                                                   | \-     | Toujours très content d'écouter Eiffair, cela me fait décourvir à chaque fois de nouvelles choses.                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Michael Kamen & Orbital - Lewis & Clark\|Michael Kamen & Orbital - Lewis & Clark]]                                                                                                                   | \-     | \-                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Quête Latérale - Episode 28  Gen IA, la loi  game-design IRL, lamour et lamitié - Podcast Addict\|Quête Latérale - Episode 28  Gen IA, la loi  game-design IRL, lamour et lamitié - Podcast Addict]] | \-     | Très sympa comme épisode, une idée intéressante sur le fait que le droit soit les règles du jeu de la vraie vie. Et aussi pas mal de réflexion autour des émotions ressenties dans et grâce aux jeux vidéo.                                                                  |
-| [[Sources/Ce que j'ai écouté/Tech Café - Claude au top  - Podcast Addict\|Tech Café - Claude au top  - Podcast Addict]]                                                                                                           | \-     | Episode très bien sur comment comprendre la mesure et les classements des chatbot et plein de nom de modèle à tester du coup.                                                                                                                                                |
-| [[Sources/Ce que j'ai écouté/Tech Café - Mon hobby, c’est la lobotomie - Podcast Addict\|Tech Café - Mon hobby, c’est la lobotomie - Podcast Addict]]                                                                             | \-     | Des avancées dans la réparation des matériels et c'est bien, Les piques envers Microsoft sur Minecraft, c'est drôle.  Impressionné par les études sur les LLM et la façon de tronquer en gardant le même niveau de qualité De la colère sur ce que fait Broadcom avec VMWare |
-| [[Sources/Ce que j'ai écouté/Tech Café - Podcasthon  Emmaüs Connect - Podcast Addict\|Tech Café - Podcasthon  Emmaüs Connect - Podcast Addict]]                                                                                   | \-     | Une découverte super intéressante de l'association Emmaus Connect et de ses buts et ambitions.                                                                                                                                                                               |
+| file.name                                                                         | rating | source                                                                  |
+| --------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------- |
+| 60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science | 🟡     | \-                                                                      |
+| Harry Dickson tome 09                                                             | 🟡     | <ul><li>https://c3po.link/QxRnuqaEUm</li></ul>                          |
+| GitLab - Comment bien gérer ses projets                                           | \-     | https://www.troispointzero.fr/le-blog/la-gestion-de-projet-avec-gitlab/ |
 
 { .block-language-dataview}
 
-# Segment 5 : Projets & Apps
+## Segment 4 : Podcasts Et Musiques
 
-## 💡 Cette Semaine, J'ai Travaillé Sur
+### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                               | date       | status |
-| -------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Projects/JDR Academy/Radio Campus Academy\|Radio Campus Academy]]                                                                             | 2023-12-12 | \-     |
-| [[01.Projets/POD.Semaine de Valkann/Articles/2024 - Semaine 15 - Garder Une Trace Des Choses\|2024 - Semaine 15 - Garder Une Trace Des Choses]] | 2024-04-08 | \-     |
-
-{ .block-language-dataview}
-
-## 🖥 Cette Semaine, J'ai testé
-
-| File                                                                                                                              | rating | review                                                                                                                                                                                                            |
-| --------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai testé/Suno\|Suno]]                                                                                       | \-     | Très très drole mais très difficile d'obtenir un son dans le genre souhaité                                                                                                                                       |
-| [[Sources/Ce que j'ai testé/Ugly Avatar\|Ugly Avatar]]                                                                         | \-     | Une application inutile donc forcément indispensable : un générateur d'avatar moche.                                                                                                                              |
-| [[Sources/Ce que j'ai testé/Beeper — All your chats in one app. Yes, really\|Beeper — All your chats in one app. Yes, really]] | \-     | Je teste cette application qui doit normalement rassemblé toute les messageries instannées. Pour l'instant c'est pas mal mais j'ai quand même quelques appréhension à me connecter avec à toutes mes messageries. |
+| file.name                                                                                        | rating | source                                                              |
+| ------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------- |
+| Event Horizon - Orbital                                                                          | \-     | https://youtube.com/watch?v=lXWQA_Xedj8&amp;si=K0Mw9KnLc9jBfgaG     |
+| Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict         | \-     | https://podcastaddict.com/je-deteste-les-podcasts/episode/173694284 |
+| Lair de rien - 014 - Des petits bruits - Podcast Addict                                          | \-     | https://podcastaddict.com/l-air-de-rien/episode/174211612           |
+| Michael Kamen & Orbital - Lewis & Clark                                                          | \-     | https://youtube.com/watch?v=x1_P2rumYt8&amp;si=PiWL_0jQ_Da1EgX-     |
+| Quête Latérale - Episode 28  Gen IA, la loi  game-design IRL, lamour et lamitié - Podcast Addict | \-     | https://podcastaddict.com/quete-laterale/episode/174108393          |
+| Tech Café - Claude au top  - Podcast Addict                                                      | \-     | https://podcastaddict.com/tech-cafe/episode/173925322               |
+| Tech Café - Mon hobby, c’est la lobotomie - Podcast Addict                                       | \-     | https://podcastaddict.com/tech-cafe/episode/174092894               |
+| Tech Café - Podcasthon  Emmaüs Connect - Podcast Addict                                          | \-     | https://podcastaddict.com/tech-cafe/episode/173725013               |
 
 { .block-language-dataview}
 
-# Segment 6 : Jeux
+## Segment 5 : Projets & Apps
 
-## 🎮 Cette Semaine, J'ai Joué
+### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                                                          | rating | review |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------ |
-| [[Sources/Ce à quoi j'ai joué/Alien Invasion RPG Idle Space – Applications sur Google Play\|Alien Invasion RPG Idle Space – Applications sur Google Play]] | \-     | \-     |
-| [[Sources/Ce à quoi j'ai joué/Rush Royale\|Rush Royale]]                                                                                                   | \-     | \-     |
+| file.name                                       | rating | source |
+| ----------------------------------------------- | ------ | ------ |
+| Radio Campus Academy                            | \-     | \-     |
+| 2024 - Semaine 15 - Garder Une Trace Des Choses | \-     | \-     |
 
 { .block-language-dataview}
 
+### 🖥 Cette Semaine, J'ai testé
 
+| file.name                                       | rating | source                                 |
+| ----------------------------------------------- | ------ | -------------------------------------- |
+| Suno                                            | \-     | https://app.suno.ai/                   |
+| Ugly Avatar                                     | \-     | https://txstc55.github.io/ugly-avatar/ |
+| Beeper — All your chats in one app. Yes, really | \-     | https://www.beeper.com/                |
+
+{ .block-language-dataview}
+
+## Segment 6 : Jeux
+
+### 🎮 Cette Semaine, J'ai Joué
+
+| file.name                                                    | rating | source                                                                                  |
+| ------------------------------------------------------------ | ------ | --------------------------------------------------------------------------------------- |
+| Alien Invasion RPG Idle Space – Applications sur Google Play | \-     | https://play.google.com/store/apps/details?id=com.multicastgames.venomSurvive&amp;hl=fr |
+| Rush Royale                                                  | \-     | https://www.youtube.com/@rushroyaleofficial                                             |
+
+{ .block-language-dataview}
