--- a/src/site/notes/Calendrier/Semaines/2024-16.md
+++ b/src/site/notes/Calendrier/Semaines/2024-16.md
@@ -10,18 +10,20 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                             | rating | review                                                                                                                                                                                                     |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/Part 1 Blade Engine Tutorials - Creating the first scene\|Part 1 Blade Engine Tutorials - Creating the first scene]]                                                 | 🟢     | Une vidéo sans son sur la présentation d'un moteur de création de jeu d'aventure de type point & clic qui a l'air assez sympa.                                                                             |
-| [[Sources/Ce que j'ai vu/20 Adventure Game Studio (AGS) Games in 5 Minutes\|20 Adventure Game Studio (AGS) Games in 5 Minutes]]                                                               | 🟡     | La vidéo n'apporte pas grand chose hormis les liste de jeu mais on ne sait pas vraiment qui est qui. Donc a vous de chercher si vous voyez une image qui vous parle ou un gameplay que vous voulez tester. |
-| [[Sources/Ce que j'ai vu/Adventure Game Studio Tutorial Episode 1, Part 1 Basics, Backgrounds and Sprites\|Adventure Game Studio Tutorial Episode 1, Part 1 Basics, Backgrounds and Sprites]] | \-     | \-                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai vu/Adventure Game Studio Tutorial Episode 1, Part 2 Inventory and Hotspots\|Adventure Game Studio Tutorial Episode 1, Part 2 Inventory and Hotspots]]                   | \-     | Tutoriels sur Adventure Game Studio plutôt pas mal plutôt simple à prendre en main.                                                                                                                        |
-| [[Sources/Ce que j'ai vu/AI vs. AI in 100m Dash (deep reinforcement learning)\|AI vs. AI in 100m Dash (deep reinforcement learning)]]                                                         | \-     | Une vidéo assez fun mais je ne suis pas sûr qu'elle ait vraiment d'autres intérêts                                                                                                                         |
-| [[Sources/Ce que j'ai vu/How To Pixel Art In 10 Minutes  Pixel Art Tutorial\|How To Pixel Art In 10 Minutes  Pixel Art Tutorial]]                                                             | \-     | Pas mal d'astuces sympa pour commencer le pixel art.                                                                                                                                                       |
+| file.name                                                                        | rating | source                                                                                              |
+| -------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------- |
+| Part 1 Blade Engine Tutorials - Creating the first scene                         | 🟢     | <ul><li>https://www.youtube.com/watch?v=u8hDIfZF9uM&amp;t=618s</li></ul>                            |
+| 20 Adventure Game Studio (AGS) Games in 5 Minutes                                | 🟡     | <ul><li>https://www.youtube.com/watch?v=xfFOnZkrOy4</li></ul>                                       |
+| Adventure Game Studio Tutorial Episode 1, Part 1 Basics, Backgrounds and Sprites | \-     | \-                                                                                                  |
+| Adventure Game Studio Tutorial Episode 1, Part 2 Inventory and Hotspots          | \-     | https://www.youtube.com/watch?v=4ClmAR5m2z0&amp;list=PLeuPHRWonRSQweIZ06N-6UmyZ0StBgLtq&amp;index=2 |
+| AI vs. AI in 100m Dash (deep reinforcement learning)                             | \-     | https://youtube.com/watch?v=pJPdW8WWAso&amp;si=UnKB_uvMzbbtblzc                                     |
+| How To Pixel Art In 10 Minutes  Pixel Art Tutorial                               | \-     | <ul><li>https://youtube.com/watch?v=v-ibXM3xBjg&amp;si=KnlNcolZzNHV9ZUB</li></ul>                   |
 
 { .block-language-dataview}
 
@@ -29,10 +31,10 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                                                                                                   | rating | review                                                                                                                                                                                                                  |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 284\|Dense Discovery – Issue 284]]                                                                                                                                                 | 🟡     | Un numéro qui m'a moins parlé, moins emballé cette semaine. Le concept de Pub Choir a l'air sympa mais bon.                                                                                                             |
-| [[Sources/Ce que j'ai lu/Workshop Report Forging Alliances in EdTech - A Pathway to Trust and Evidence — EdTech Strategy Lab\|Workshop Report Forging Alliances in EdTech - A Pathway to Trust and Evidence — EdTech Strategy Lab]] | 🟡     | Un article un peu bateau sur une rencontre récente entre les acteurs de education numérique et certain groupe et legislateur pur essayer de faire parler tout le monde. L'idée est louable, l'article est un peu léger. |
+| file.name                                                                                           | rating | source                                                                |
+| --------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------- |
+| Dense Discovery – Issue 284                                                                         | 🟡     | <ul><li>https://www.densediscovery.com/issues/284</li></ul>           |
+| Workshop Report Forging Alliances in EdTech - A Pathway to Trust and Evidence — EdTech Strategy Lab | 🟡     | <ul><li>https://www.edtechstrategylab.org/news/gec-workshop</li></ul> |
 
 { .block-language-dataview}
 
@@ -40,14 +42,14 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                                                                                                                                                         | rating | review                                                                                                                                                                                                                                                          |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Decideo - Data Science, Big Data, Intelligence Augmentée - 4.9 Votre plan de métro des compétences, avec Jean-Guillaume Pelletier de Mindmatcher - Podcast Addict\|Decideo - Data Science, Big Data, Intelligence Augmentée - 4.9 Votre plan de métro des compétences, avec Jean-Guillaume Pelletier de Mindmatcher - Podcast Addict]]                       | 🟢     | J'ai bien aimé cette épisode, même si je ne sais pas pour quel raison j'ai un peu du mal a comprendre ce qu'il fait et dans quel contexte, je trouve que son idée de visualisation de compétence sous forme e ligen de métro suivant les métiers visés est top. |
-| [[Sources/Ce que j'ai écouté/Génération Do It Yourself - 371 - Stanislas de Bentzmann - Devoteam - Perdre 30% de ses effectifs, rester coté en Bourse 22 ans et faire 1,5 milliard de CA - Podcast Addict\|Génération Do It Yourself - 371 - Stanislas de Bentzmann - Devoteam - Perdre 30% de ses effectifs, rester coté en Bourse 22 ans et faire 1,5 milliard de CA - Podcast Addict]] | 🟢     | Alors je ne suis pas du tout raccord avec ce monsieur mais je dois reconnaitre qu'il a des idées et des expériences autour de l'entreprise du numérique qui sont intéressante.                                                                                  |
-| [[Sources/Ce que j'ai écouté/Tech Café - Business models et modèles électriques - Podcast Addict\|Tech Café - Business models et modèles électriques - Podcast Addict]]                                                                                                                                                                                                                   | 🟢     | Une multitude d'info diverse dans cet épisode, on y voit que pas mal de boite recherche de nouvelle piste et de nouveaux business modele ou en abandonne des anciens.                                                                                           |
-| [[Sources/Ce que j'ai écouté/Tech Café - Hatsune Miku  que lui reste-t-il  - Podcast Addict (1)\|Tech Café - Hatsune Miku  que lui reste-t-il  - Podcast Addict (1)]]                                                                                                                                                                                                                     | 🟢     | Super épisode : de nouveaux modèle LLM que j'ai envie de tester, un dossier musicale étonant et pas mal de news jeux vidéo.                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/Tech Café - Pizzas boostées à lIA - Podcast Addict\|Tech Café - Pizzas boostées à lIA - Podcast Addict]]                                                                                                                                                                                                                                                     | 🟢     | L'IA dans la pizza effectivement est-ce qu'on n'arrive pas au bout de la hype de départ de l'ia ? En tout cas je découvre que certain sont fan de Manga et ont un petit côté Otaku qui était bien caché                                                         |
-| [[Sources/Ce que j'ai écouté/Solopreneur  créer et développer un business au service de ta vie - Ego et confiance pour entreprendre - Podcast Addict\|Solopreneur  créer et développer un business au service de ta vie - Ego et confiance pour entreprendre - Podcast Addict]]                                                                                                           | 🟡     | Je trouve e moins en moins pertinent ce podcast pour ma pratique et je pense que je ne vais pas continuer à le suivre.                                                                                                                                          |
+| file.name                                                                                                                                                                    | rating | source                                                                                                                         |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------ |
+| Decideo - Data Science, Big Data, Intelligence Augmentée - 4.9 Votre plan de métro des compétences, avec Jean-Guillaume Pelletier de Mindmatcher - Podcast Addict            | 🟢     | <ul><li>https://podcastaddict.com/decideo-data-science-big-data-intelligence-augmentee/episode/174557482</li></ul>             |
+| Génération Do It Yourself - 371 - Stanislas de Bentzmann - Devoteam - Perdre 30% de ses effectifs, rester coté en Bourse 22 ans et faire 1,5 milliard de CA - Podcast Addict | 🟢     | <ul><li>https://podcastaddict.com/generation-do-it-yourself/episode/170827054</li></ul>                                        |
+| Tech Café - Business models et modèles électriques - Podcast Addict                                                                                                          | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/174292198</li></ul>                                                        |
+| Tech Café - Hatsune Miku  que lui reste-t-il  - Podcast Addict (1)                                                                                                           | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/174666257</li></ul>                                                        |
+| Tech Café - Pizzas boostées à lIA - Podcast Addict                                                                                                                           | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/174459351</li></ul>                                                        |
+| Solopreneur  créer et développer un business au service de ta vie - Ego et confiance pour entreprendre - Podcast Addict                                                      | 🟡     | <ul><li>https://podcastaddict.com/solopreneur-creer-et-developper-un-business-au-service-de-ta-vie/episode/174452481</li></ul> |
 
 { .block-language-dataview}
 
@@ -55,16 +57,16 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                                                               | date       | status |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------- | ------ |
-| [[01.Projets/POD.Semaine de Valkann/Articles/2024 - Semaine 16 - De l'importance de prendre le temps\|2024 - Semaine 16 - De l'importance de prendre le temps]] | 2024-04-16 | \-     |
+| file.name                                               | rating | source |
+| ------------------------------------------------------- | ------ | ------ |
+| 2024 - Semaine 16 - De l'importance de prendre le temps | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -72,10 +74,8 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                                    | rating | review                                                                     |
-| --------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------- |
-| [[Sources/Ce à quoi j'ai joué/Poirmento by Mike Sheldon\|Poirmento by Mike Sheldon]] | 🟢     | Un petit jeu très sympa dansl'esprit agatha Cristie avec pas mal d'humour. |
+| file.name                 | rating | source                                            |
+| ------------------------- | ------ | ------------------------------------------------- |
+| Poirmento by Mike Sheldon | 🟢     | <ul><li>https://elleo.itch.io/poirmento</li></ul> |
 
 { .block-language-dataview}
-
-
