--- a/src/site/notes/Calendrier/Semaines/2024-17.md
+++ b/src/site/notes/Calendrier/Semaines/2024-17.md
@@ -1,9 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-17/","title":"2024-17"}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-17/","title":"Cette semaine"}
 ---
 
-
-# 2024-17
 
 # Cette semaine
 
@@ -12,15 +10,17 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                                                   | rating | review                                                                                                                                  |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/Cette théorie du complot est vraie\|Cette théorie du complot est vraie]]                                                                                                                                   | 🟢     | Une vidéo impressionnante sur les focntionnement des constructeur d'imprimante et de cartouche.                                         |
-| [[Sources/Ce que j'ai vu/Start using the flipside of your markdown notes Powerful new Excalidraw-Obsidian features - v2.0.26\|Start using the flipside of your markdown notes Powerful new Excalidraw-Obsidian features - v2.0.26]] | 🟢     | Super vidéo sur l'avancée du plugin excalidraw dans l'idée de faire un PKM visuelle avec des notes en deux versions : dessins + Textes. |
-| [[Sources/Ce que j'ai vu/Taking visual notes with Obsidian Excalidraw\|Taking visual notes with Obsidian Excalidraw]]                                                                                                               | 🟢     | Très content de voir que d'autres personnes s'intéressent au Visual PKM                                                                 |
+| file.name                                                                                           | rating | source                                                        |
+| --------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------- |
+| Cette théorie du complot est vraie                                                                  | 🟢     | <ul><li>https://www.youtube.com/watch?v=zKfdjsK7VAI</li></ul> |
+| Start using the flipside of your markdown notes Powerful new Excalidraw-Obsidian features - v2.0.26 | 🟢     | <ul><li>https://www.youtube.com/watch?v=tHUcD4rWIuY</li></ul> |
+| Taking visual notes with Obsidian Excalidraw                                                        | 🟢     | <ul><li>https://www.youtube.com/watch?v=zmgqMZi6QL8</li></ul> |
 
 { .block-language-dataview}
 
@@ -28,9 +28,9 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                   | rating | review |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------ |
-| [[Sources/Ce que j'ai lu/Le Club des amateurs de romans policiers - Ils étaient sept\|Le Club des amateurs de romans policiers - Ils étaient sept]] | \-     | \-     |
+| file.name                                                   | rating | source |
+| ----------------------------------------------------------- | ------ | ------ |
+| Le Club des amateurs de romans policiers - Ils étaient sept | \-     | \-     |
 
 { .block-language-dataview}
 
@@ -38,19 +38,19 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict\|Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict]]                                                                   | 🟢     | Une émission intéressnate sur els sites de fouilels préhistorique français.                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict\|Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict]]                                                                                                                                   | 🟢     | Enfin repris l'écoute et terminé Toxique, histoire sombre, triste, mais avec une pointe d'espoir. En tout cas c'est bien amené.                                                                                                                                                                                                                                                                                                                                                                                              |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P2.EP0_Le-lutin-amoureux_Présentation - Podcast Addict\|Late Night Stories - S1.P2.EP0_Le-lutin-amoureux_Présentation - Podcast Addict]]                                                                                     | 🟢     | Une histoire très sympa, proche du conte ancien et qui nous amène un twist assez sombre.                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict\|Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict]]                                                                                   | 🟢     | Un background de personnage de jdr mis en fiction sonore, c'est une première pour moi, c'est bien fait et l'univers est intéressant.                                                                                                                                                                                                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai écouté/Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict\|Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict]] | 🟢     | Un phénomène que je ne connaissais pas et qui doit être intéressant de voir.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| [[Sources/Ce que j'ai écouté/Tech Café - Airchat  parlez. Point. - Podcast Addict\|Tech Café - Airchat  parlez. Point. - Podcast Addict]]                                                                                                                                         | 🟢     | Toujours un trèc bon épisode, un peu flipant car on arrive de plus en plus dans les dystopie guerrière et les guerres cyberpunk des oeuvres de fictions.                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/Tech Café - Luxo Jr. - Podcast Addict\|Tech Café - Luxo Jr. - Podcast Addict]]                                                                                                                                                                       | 🟢     | 2pisode différent mais très sympa, j'aime bien les intervention de POD, et je suis triste du constat que les gens maintent ne connaitrons pas un web non disfnctionnel complètement polué par des faux site pour amener du trafic et des pub. Une idée donné pour améliorer ça : faire des vidéos qui sont plus facilement indexable que par le passé. QU'est ce que vous en pensez ? la semaine de Valkann et les articles en vidéos ? Et pour les mettre ou ? Youtube ? ça ne règle pas le souci que google soit derrière… |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict\|Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict]]                                                                                                               | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict]]                                                                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict\|Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict]]                                                                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai écouté/Les Échos d&39;Arkham - La boite de base de l&39;Appel de Cthulhu de EDGE - Podcast Addict\|Les Échos d&39;Arkham - La boite de base de l&39;Appel de Cthulhu de EDGE - Podcast Addict]]                                                             | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| file.name                                                                                                                | rating | source                                                                                                |
+| ------------------------------------------------------------------------------------------------------------------------ | ------ | ----------------------------------------------------------------------------------------------------- |
+| Carbone 14, le magazine de larchéologie - Actualités d’avant le déluge - Podcast Addict                                  | 🟢     | <ul><li>https://podcastaddict.com/carbone-14-le-magazine-de-l-archeologie/episode/174867227</li></ul> |
+| Late Night Stories - S1.P1.EP3_Toxique - Podcast Addict                                                                  | 🟢     | <ul><li>https://podcastaddict.com/late-night-stories/episode/168263734</li></ul>                      |
+| Late Night Stories - S1.P2.EP0_Le-lutin-amoureux_Présentation - Podcast Addict                                           | 🟢     | <ul><li>https://podcastaddict.com/late-night-stories/episode/168527643</li></ul>                      |
+| Late Night Stories - S1.P3.EP0_Entre-feu-et-glace_Présentation - Podcast Addict                                          | 🟢     | <ul><li>https://podcastaddict.com/late-night-stories/episode/174956925</li></ul>                      |
+| Mauvais genres - Dragclown Affairs, une exposition qui fait fusionner l’univers des clowns et des drags - Podcast Addict | 🟢     | <ul><li>https://podcastaddict.com/mauvais-genres/episode/174900437</li></ul>                          |
+| Tech Café - Airchat  parlez. Point. - Podcast Addict                                                                     | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/174830388</li></ul>                               |
+| Tech Café - Luxo Jr. - Podcast Addict                                                                                    | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/175033530</li></ul>                               |
+| Late Night Stories - S1.P2.EP3_Le-lutin-amoureux - Podcast Addict                                                        | \-     | https://podcastaddict.com/late-night-stories/episode/174956926                                        |
+| Late Night Stories - S1.P3.EP2_Entre-feu-et-glace - Podcast Addict                                                       | \-     | https://podcastaddict.com/late-night-stories/episode/174956927                                        |
+| Late Night Stories - S1.P3.EP3_Entre-feu-et-glace - Podcast Addict                                                       | \-     | https://podcastaddict.com/late-night-stories/episode/174956929                                        |
+| Les Échos d&39;Arkham - La boite de base de l&39;Appel de Cthulhu de EDGE - Podcast Addict                               | \-     | \-                                                                                                    |
 
 { .block-language-dataview}
 
@@ -58,17 +58,17 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                         | date       | status |
-| ------------------------------------------------------------ | ---------- | ------ |
-| [[Atlas/Organisation du PKM\|Organisation du PKM]]        | 2023-12-12 | \-     |
-| [[Calendrier/Jours/2024/04-April/2024-04-25\|2024-04-25]] | 2024-04-25 | \-     |
+| file.name           | rating | source |
+| ------------------- | ------ | ------ |
+| Organisation du PKM | \-     | \-     |
+| 2024-04-25          | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -76,9 +76,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
-
-
