--- a/src/site/notes/Calendrier/Semaines/2024-18.md
+++ b/src/site/notes/Calendrier/Semaines/2024-18.md
@@ -1,9 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-18/","title":"2024-18"}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-18/","title":"Cette semaine"}
 ---
 
-
-# 2024-18
 
 # Cette semaine
 
@@ -12,18 +10,20 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                                     | rating | review                                                                                                                                                                                                                                     |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [[Sources/Ce que j'ai vu/Before You Write Frame Your Thoughts with Concept Modeling\|Before You Write Frame Your Thoughts with Concept Modeling]]                                                                     | 🟢     | Super vidéo sur l'explication des Map of Concept ou des Concept modelling sous forme de schéma. C'est clair et bien expliqué et ça aide beaucup à comprendre et appronfondir certaines idées ou processus.                                 |
-| [[Sources/Ce que j'ai vu/Coding Challenge 180 Falling Sand\|Coding Challenge 180 Falling Sand]]                                                                                                                       | 🟢     | Une vidéo marrante sur comment on peut coder certains aspect physique. Ici la chutte du sable                                                                                                                                              |
-| [[Sources/Ce que j'ai vu/Connecting visual notes with Obsidian Excalidraw\|Connecting visual notes with Obsidian Excalidraw]]                                                                                         | 🟢     | Très intéressant de voir comment a évoluer le plugin excalidraw pour justement prendre plus en compte les notes hybrides. j'ai découvert les insert de partie de dessin dans la partie texte des notes c'est bien fait.                    |
-| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                                                   | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                                                                                                                                       |
-| [[Sources/Ce que j'ai vu/Le Coeur A Ses Raisons S01E01\|Le Coeur A Ses Raisons S01E01]]                                                                                                                               | 🟢     | On regarde de nouveau la série avec ma femme. C'est toujours aussi absurde et drôle. Je suis sur qu'on pourrait utiliser passion de las passiones pour en faire une adpatation en JDR. En tout cas une série bien pour se vider la tête :) |
-| [[Sources/Ce que j'ai vu/Masters of the Universe Revolution (Série télévisée 2024) ⭐ 7.5  Animation, Action, Aventure\|Masters of the Universe Revolution (Série télévisée 2024) ⭐ 7.5  Animation, Action, Aventure]] | 🟢     | J'avais déjà vu la première partie nommée Révélation, j'avais trouvé ça bien, assez mature comme reviste des maitres de l'univers. Je viens de commencer et ça semble encore plus sombre que la saison 1.                                  |
+| file.name                                                                                    | rating | source                                                                                                    |
+| -------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------- |
+| Before You Write Frame Your Thoughts with Concept Modeling                                   | 🟢     | <ul><li>https://www.youtube.com/watch?v=Zg_DUj68VkY</li></ul>                                             |
+| Coding Challenge 180 Falling Sand                                                            | 🟢     | <ul><li>https://youtube.com/watch?v=L4u7Zy_b868&amp;si=OAxYiI10_F2tm5zr</li></ul>                         |
+| Connecting visual notes with Obsidian Excalidraw                                             | 🟢     | <ul><li>https://www.youtube.com/watch?v=lGh53N_Lj2Q</li></ul>                                             |
+| Gloutons et Dragons                                                                          | 🟢     | <ul><li>https://c3po.link/Qde65C7WMN</li></ul>                                                            |
+| Le Coeur A Ses Raisons S01E01                                                                | 🟢     | <ul><li>https://www.youtube.com/watch?v=MHmcAlrSaRo&amp;list=PLRetUrNI2Rc0AH2A94bDi0EzltK3I7pVQ</li></ul> |
+| Masters of the Universe Revolution (Série télévisée 2024) ⭐ 7.5  Animation, Action, Aventure | 🟢     | <ul><li>https://www.imdb.com/title/tt27052533/?language=fr-ca</li></ul>                                   |
 
 { .block-language-dataview}
 
@@ -31,9 +31,9 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                     | rating | review                                                                                                                                                                                                                                         |
-| ---------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Mener des parties de jeu de rôle - Créer un Scénario\|Mener des parties de jeu de rôle - Créer un Scénario]] | 🟢     | Un article de Tristan Lhomme sur la création de scénario de jeu de rôle, ou il explique sa méthode. C'est pas mal a destination des scénarios pour publication mais on trouver des outils intéressant à réutiliser dans ses propres créations. |
+| file.name                                            | rating | source                                         |
+| ---------------------------------------------------- | ------ | ---------------------------------------------- |
+| Mener des parties de jeu de rôle - Créer un Scénario | 🟢     | <ul><li>https://c3po.link/QCMfm3hYrW</li></ul> |
 
 { .block-language-dataview}
 
@@ -41,11 +41,11 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                            |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict\|Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict]]                               | 🟢     | Une histoire de Nintendo de sa création à maintenant, comme l'entreprise s'est créée, comment elle s'est modifiée et adaptée, c'est vraiment très intéressant et il a plein de chose que j'ignorais complètement. |
-| [[Sources/Ce que j'ai écouté/DataGen - 124 - ManoMano  L’ex-Chief Product Officer partage sa Stratégie Data - Podcast Addict\|DataGen - 124 - ManoMano  L’ex-Chief Product Officer partage sa Stratégie Data - Podcast Addict]]                                   | 🟢     | Une vis'on de la data qui est plutôt pertinente, je trouve : la data qui quoi et ce qui se passe, mais pas pourquoi. Les idées derrières autour des bons métrics et KPI sont justifiés. j'ai bien aimé.           |
-| [[Sources/Ce que j'ai écouté/Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict\|Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict]] | 🟢     | Deux affaires différentes et étranges mais qui donne des pistes et des inspirations pour des scénarios de jeu de rôle. Comme souvent la réalité dépasse la fiction.                                               |
+| file.name                                                                                                        | rating | source                                                                                    |
+| ---------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------- |
+| Arnaques, crimes et putaclic - Lhistoire de Nintendo  des yakuzas aux jeux vidéo - Podcast Addict                | 🟢     | <ul><li>https://podcastaddict.com/arnaques-crimes-et-putaclic/episode/175444681</li></ul> |
+| DataGen - 124 - ManoMano  L’ex-Chief Product Officer partage sa Stratégie Data - Podcast Addict                  | 🟢     | <ul><li>https://podcastaddict.com/datagen/episode/174952502</li></ul>                     |
+| Le rendez-vous de létrange - Episode 20  Laffaire Wilma Montesi (avec Kurt du podcast Obscurum) - Podcast Addict | 🟢     | <ul><li>https://podcastaddict.com/le-rendez-vous-de-l-etrange/episode/175194278</li></ul> |
 
 { .block-language-dataview}
 
@@ -53,18 +53,18 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                            | date       | status |
-| ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Atlas/Organisation du PKM\|Organisation du PKM]]                                                                           | 2023-12-12 | \-     |
-| [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]] | 2023-12-12 | \-     |
-| [[Projects/Ceux qui luttaient dans les ténèbres/Livrets/Classique/Dilettante\|Dilettante]]                                   | 2023-12-12 | \-     |
+| file.name                            | rating | source |
+| ------------------------------------ | ------ | ------ |
+| Organisation du PKM                  | \-     | \-     |
+| Ceux qui luttaient dans les ténèbres | \-     | \-     |
+| Dilettante                           | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -72,9 +72,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
-
-
