--- a/src/site/notes/Calendrier/Semaines/2024-21.md
+++ b/src/site/notes/Calendrier/Semaines/2024-21.md
@@ -1,9 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-21/","title":"2024-21"}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-21/","title":"Cette semaine"}
 ---
 
-
-# 2024-21
 
 # Cette semaine
 
@@ -12,20 +10,22 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                                 | rating | review                                                                                                               |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/Blood of Zeus (Série télévisée 2020– ) ⭐ 7.5  Animation, Action, Aventure\|Blood of Zeus (Série télévisée 2020– ) ⭐ 7.5  Animation, Action, Aventure]]                                   | 🟢     | Une deuxième saison plutôt sympathique qui se laisse regarder avec plaisir.                                          |
-| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                                               | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                 |
-| [[Sources/Ce que j'ai vu/How I Take Fleeting Notes for Obsidian (4 MIN)\|How I Take Fleeting Notes for Obsidian (4 MIN)]]                                                                                         | 🟢     | L'auteur du plugin Fleeting note nous explique ce qu'il fait avec et comment il l'utilise. Ça donne pas mal d'idées. |
-| [[Sources/Ce que j'ai vu/Jujutsu Kaisen 0 (2021) ⭐ 7.8  Animation, Action, Fantastique\|Jujutsu Kaisen 0 (2021) ⭐ 7.8  Animation, Action, Fantastique]]                                                           | 🟢     | Film d'animation très sympa autour de l'univers de Jujutsu Kaisen. J'ai vraiment bien aimé                           |
-| [[Sources/Ce que j'ai vu/Pizza de polenta, végé et sans gluten - Les recettes de François-Régis Gaudry\|Pizza de polenta, végé et sans gluten - Les recettes de François-Régis Gaudry]]                           | 🟢     | Une recette de pizza qui donne envie d'essayer, ça change un peu.                                                    |
-| [[Sources/Ce que j'ai vu/SpeedGamingFrancais - Twitch\|SpeedGamingFrancais - Twitch]]                                                                                                                             | 🟢     | En ce moment le tournoi francophone sur ALTTPR, moi franchement je scotche sur ce jeu.                               |
-| [[Sources/Ce que j'ai vu/Garôden La voie du loup solitaire (Série télévisée 2024– )  Animation, Action, Fantastique\|Garôden La voie du loup solitaire (Série télévisée 2024– )  Animation, Action, Fantastique]] | 🟡     | Une série pas mal mais pas non plus exceptionnelle et je trouve l'animation assez moyenne.                           |
-| [[Sources/Ce que j'ai vu/2024-05-23 - Tout savoir sur le dispositif démission pour reconversion\|2024-05-23 - Tout savoir sur le dispositif démission pour reconversion]]                                         | 🔴     | Encore un webinaire de l'Apec mais que j'ai trouvé plus que moyen. Expédié en 30 min puis ensuite question...        |
+| file.name                                                                                  | rating | source                                         |
+| ------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------- |
+| Blood of Zeus (Série télévisée 2020– ) ⭐ 7.5  Animation, Action, Aventure                  | 🟢     | https://www.imdb.com/title/tt10009170/         |
+| Gloutons et Dragons                                                                        | 🟢     | <ul><li>https://c3po.link/Qde65C7WMN</li></ul> |
+| How I Take Fleeting Notes for Obsidian (4 MIN)                                             | 🟢     | https://www.youtube.com/watch?v=spqVolFtPws    |
+| Jujutsu Kaisen 0 (2021) ⭐ 7.8  Animation, Action, Fantastique                              | 🟢     | https://www.imdb.com/title/tt14331144/         |
+| Pizza de polenta, végé et sans gluten - Les recettes de François-Régis Gaudry              | 🟢     | https://www.youtube.com/watch?v=hs9yd5EUka0    |
+| SpeedGamingFrancais - Twitch                                                               | 🟢     | https://www.twitch.tv/speedgamingfrancais      |
+| Garôden La voie du loup solitaire (Série télévisée 2024– )  Animation, Action, Fantastique | 🟡     | https://www.imdb.com/title/tt32178759/         |
+| 2024-05-23 - Tout savoir sur le dispositif démission pour reconversion                     | 🔴     | \-                                             |
 
 { .block-language-dataview}
 
@@ -33,9 +33,9 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                   | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| -------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 277\|Dense Discovery – Issue 277]] | \-     | Une newsletter autour de la nourriture ultra-industrialisée que certains chercheurs comparent à une nouvelle industrie du tabac en termes de danger pour la santé. La mesure des calories est à la base du marketing de coca cola et l'on dépense autant de calorie à chasser sa nourriture qu'à gérer le stress de la vie moderne. Toujours se demander si ce qu'on fait vaut le coup, si cela vaut la peine qu'on y dépense de l'énergie. iCloud est rempli a 80% de photo de produit unique avec pour commentaire : C'est celui-là le bon ! |
+| file.name                   | rating | source                                    |
+| --------------------------- | ------ | ----------------------------------------- |
+| Dense Discovery – Issue 277 | \-     | https://www.densediscovery.com/issues/277 |
 
 { .block-language-dataview}
 
@@ -43,16 +43,16 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                             | rating | review                                                                                                                                                             |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Tetris  lhistoire dun jeu vidéo digne dun roman despionnage 12 - Podcast Addict\|Arnaques, crimes et putaclic - Tetris  lhistoire dun jeu vidéo digne dun roman despionnage 12 - Podcast Addict]] | 🟢     | L'histoire incroyable du jeu de rôle Tetris sur fond de guerre froide.                                                                                             |
-| [[Sources/Ce que j'ai écouté/DataGen - 129 - BlaBlaCar  Scaler l’impact de léquipe Data Engineering - Podcast Addict\|DataGen - 129 - BlaBlaCar  Scaler l’impact de léquipe Data Engineering - Podcast Addict]]                                               | 🟢     | Réflexion intéressante et surtout un témoignage de la mise en place du data mesh.                                                                                  |
-| [[Sources/Ce que j'ai écouté/Decideo - Data Science, Big Data, Intelligence Augmentée - 4.16 Les mots-clefs du Data Mesh - Podcast Addict\|Decideo - Data Science, Big Data, Intelligence Augmentée - 4.16 Les mots-clefs du Data Mesh - Podcast Addict]]     | 🟢     | Les points important du concept de Data mesh expliqués simplement.                                                                                                 |
-| [[Sources/Ce que j'ai écouté/Tech Café - Les PC Copilot+ débarquent ! - Podcast Addict\|Tech Café - Les PC Copilot+ débarquent ! - Podcast Addict]]                                                                                                           | 🟢     | Le coup de microsoft avec Recall fait quand même peur en terme de confidentialité sur son pc.                                                                      |
-| [[Sources/Ce que j'ai écouté/Tech Rōnins - Introduction au monde des startups, avec Yoann Demont - Podcast Addict\|Tech Rōnins - Introduction au monde des startups, avec Yoann Demont - Podcast Addict]]                                                     | 🟢     | Des explications sur les startups et les différentes étapes par lesquelles elles passent, c'est assez intéressant de comprendre ce qui se cache derrière le terme. |
-| [[Sources/Ce que j'ai écouté/SCEPTICISME SCIENTIFIQUE - Épisode 559 Éléments d’histoire sur la genèse du Comité Para - Podcast Addict\|SCEPTICISME SCIENTIFIQUE - Épisode 559 Éléments d’histoire sur la genèse du Comité Para - Podcast Addict]]             | 🟡     | La création du comité PARA, un pan d'histoire du scepticisme, mais ça manque un peu de croustillant                                                                |
-| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Tetris  la guerre froide du jeu vidéo 22 - Podcast Addict\|Arnaques, crimes et putaclic - Tetris  la guerre froide du jeu vidéo 22 - Podcast Addict]]                                             | \-     | \-                                                                                                                                                                 |
-| [[Sources/Ce que j'ai écouté/Tech Café - GPT-4o vs Google Gemini - Podcast Addict\|Tech Café - GPT-4o vs Google Gemini - Podcast Addict]]                                                                                                                     | \-     | \-                                                                                                                                                                 |
+| file.name                                                                                                      | rating | source                                                                                           |
+| -------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------ |
+| Arnaques, crimes et putaclic - Tetris  lhistoire dun jeu vidéo digne dun roman despionnage 12 - Podcast Addict | 🟢     | https://podcastaddict.com/arnaques-crimes-et-putaclic/episode/176218977                          |
+| DataGen - 129 - BlaBlaCar  Scaler l’impact de léquipe Data Engineering - Podcast Addict                        | 🟢     | https://podcastaddict.com/datagen/episode/176404837                                              |
+| Decideo - Data Science, Big Data, Intelligence Augmentée - 4.16 Les mots-clefs du Data Mesh - Podcast Addict   | 🟢     | https://podcastaddict.com/decideo-data-science-big-data-intelligence-augmentee/episode/176375497 |
+| Tech Café - Les PC Copilot+ débarquent ! - Podcast Addict                                                      | 🟢     | https://podcastaddict.com/tech-cafe/episode/176495340                                            |
+| Tech Rōnins - Introduction au monde des startups, avec Yoann Demont - Podcast Addict                           | 🟢     | https://podcastaddict.com/tech-ronins/episode/176121305                                          |
+| SCEPTICISME SCIENTIFIQUE - Épisode 559 Éléments d’histoire sur la genèse du Comité Para - Podcast Addict       | 🟡     | <ul><li>https://podcastaddict.com/scepticisme-scientifique/episode/176207727</li></ul>           |
+| Arnaques, crimes et putaclic - Tetris  la guerre froide du jeu vidéo 22 - Podcast Addict                       | \-     | https://podcastaddict.com/arnaques-crimes-et-putaclic/episode/176341707                          |
+| Tech Café - GPT-4o vs Google Gemini - Podcast Addict                                                           | \-     | \-                                                                                               |
 
 { .block-language-dataview}
 
@@ -60,15 +60,15 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File | date | status |
-| ---- | ---- | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -76,10 +76,8 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                        | rating | review                                                                                                                   |
-| --------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------ |
-| [[Sources/Ce à quoi j'ai joué/Les Mondes Disparus\|Les Mondes Disparus]] | 🟢     | Une super exposition en réalité virtuelle, c'est un peu un des futurs possible des jeux vidéos. J'ai adoré l'expérience. |
+| file.name           | rating | source |
+| ------------------- | ------ | ------ |
+| Les Mondes Disparus | 🟢     | \-     |
 
 { .block-language-dataview}
-
-
