--- a/src/site/notes/Calendrier/Semaines/2024-24.md
+++ b/src/site/notes/Calendrier/Semaines/2024-24.md
@@ -10,17 +10,19 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                                             | rating | review                                                                                                                                                                                                                                                                                                          |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/JDR Academy au pays de Jennnyyyy (Discussion JDR)\|JDR Academy au pays de Jennnyyyy (Discussion JDR)]]                                                                                               | 🟢     | Une interview très sympa de l'équipe qui a joué la campagne Libreté sur notre podcast JDR Academy.                                                                                                                                                                                                              |
-| [[Sources/Ce que j'ai vu/One Piece Film Red\|One Piece Film Red]]                                                                                                                                                             | 🟢     | Un animé plutôt sympa qui permet de replonger dans l'univers tout en s'épargnant le fait de réviser les 1000 épisodes sortit, car l'histoire se suite très bien avec une connaissance basique de l'univers et du manga.                                                                                         |
-| [[Sources/Ce que j'ai vu/Baki Hanma vs Kengan Ashura\|Baki Hanma vs Kengan Ashura]]                                                                                                                                           | 🟡     | Pas térrible comme animé, l'histoire est très moyenne c'est vraiment juste un pretexte pour faire apparaitre des personnages des deux séries.                                                                                                                                                                   |
-| [[Sources/Ce que j'ai vu/GTD Getting Things Done in Logseq\|GTD Getting Things Done in Logseq]]                                                                                                                               | 🟡     | Une vidéo sympa sur la façon d'implémenter les listes et gestion de tâche de [[Sources/Ce que j'ai lu/S'organiser pour réussir\|GTD]] dans Logseq. Au final pour l'instant, je ne suis pas convaincu par l'utilisation de logseq uniquement pour de la gestion e tâche, mais le logiciel à une philosophie que je trouve intéressante. |
-| [[Sources/Ce que j'ai vu/Logseq beginners course (58) - Tagging for task management, spaced repetition & resurfacing info\|Logseq beginners course (58) - Tagging for task management, spaced repetition & resurfacing info]] | 🟡     | Une vidéo explicative sur la façon dont sont gérées les tâches dans le logiciel Logseq. Plutôt pas mal.                                                                                                                                                                                                         |
+| file.name                                                                                        | rating | source                                                     |
+| ------------------------------------------------------------------------------------------------ | ------ | ---------------------------------------------------------- |
+| JDR Academy au pays de Jennnyyyy (Discussion JDR)                                                | 🟢     | https://youtube.com/watch?'"byRISOEJB"0&amp;feature=sha'ed |
+| One Piece Film Red                                                                               | 🟢     | https://www.imdb.com/title/tt16183464/                     |
+| Baki Hanma vs Kengan Ashura                                                                      | 🟡     | https://www.imdb.com/title/tt31869664/                     |
+| GTD Getting Things Done in Logseq                                                                | 🟡     | https://www.youtube.com/watch?v=nieOiG8LGa0                |
+| Logseq beginners course (58) - Tagging for task management, spaced repetition & resurfacing info | 🟡     | https://www.youtube.com/watch?v=zyFcvET62PY&amp;t=310s     |
 
 { .block-language-dataview}
 
@@ -28,15 +30,15 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                           | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| -------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 292\|Dense Discovery – Issue 292]]                         | 🟢     | C'est toujours agréable de lire Dense Discovery, les sujets sont variés, les réflexions intéressantes, cette semaine, il prend le temps de réfléchir à ses vacances et l'utilisation du train et s'émerveille de la faciliter avec laquelle le train permet de voyage loin et vite. De plus cette semaine son interviewé parle du concept de Scenius qui est une sorte de puissance de la communauté dans la créativité et la création, ce qui est un concept qui me parle beaucoup.                              |
-| [[Sources/Ce que j'ai lu/Don't Solve Your Problems, Collect Them\|Don't Solve Your Problems, Collect Them]] | 🟢     | Une méthode de réflexion qui consiste à toujours gardé une 12 aine de problème en tête pour que son esprit les traite au fur et à mesure. Dans [[Sources/Ce que j'ai lu/Deep work retrouver la concentration dans un monde de distractions\|Deep Work]] il parle de ceci, mais de manière un peu différente : un problème à la fois lors d'une activité physique, et on se retrouve, je pense à aller un peu à l'encontre de [[Sources/Ce que j'ai lu/S'organiser pour réussir\|GTD]] ensuite c'est sans doute quelque chose qui peut fonctionner pour certain. |
-| [[Sources/Ce que j'ai lu/How Your World Shapes You\|How Your World Shapes You]]                             | 🟢     | Une réflexion autour de l'environnemental psychologie ou comment l'environnement influe sur votre mental et votre bien-être, avec plusieurs pistes à suivre pour améliorer tout ça.                                                                                                                                                                                                                                                                                                                               |
-| [[Sources/Ce que j'ai lu/Macchiato Monsters\|Macchiato Monsters]]                                           | 🟢     | Un jdr OSR très cool je trouve avec des mécaniques que j'aime beaucoup.                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai lu/Public Access\|Public Access]]                                                     | 🟢     | Un coup de cœur, un jeu de mystère émergent avec une ambiance d'enquête années 80/90 j'adore ! j'ai eu l'occasion d'y jouer et c'était vraiment bien.                                                                                                                                                                                                                                                                                                                                                             |
-| [[Sources/Ce que j'ai lu/The Silent Productivity Killer\|The Silent Productivity Killer]]                   | 🟢     | Un article sur le présentéisme et les problèmes qu'il peut causer, mais surtout les causes de celui-ci. Et c'est pour moi le plus important, car on remarque qu'une partie des causes du présentéisme vient d'un mal-être ou d'un problème chez celui qui le pratique et il existe des pistes pour essayer d'aller mieux.                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai lu/Leveraging the local graph\|Leveraging the local graph]]                           | 🟡     | Une réflexion autour de l'utilité du graphe local d'Obsidian pour plus facilement faire les liens entre les notes, presque s'en servir comme une carte de contenue si on suit la méthodologie de prise de note des notes atomiques.                                                                                                                                                                                                                                                                               |
+| file.name                               | rating | source                                    |
+| --------------------------------------- | ------ | ----------------------------------------- |
+| Dense Discovery – Issue 292             | 🟢     | https://www.densediscovery.com/issues/292 |
+| Don't Solve Your Problems, Collect Them | 🟢     | \-                                        |
+| How Your World Shapes You               | 🟢     | \-                                        |
+| Macchiato Monsters                      | 🟢     | \-                                        |
+| Public Access                           | 🟢     | \-                                        |
+| The Silent Productivity Killer          | 🟢     | \-                                        |
+| Leveraging the local graph              | 🟡     | \-                                        |
 
 { .block-language-dataview}
 
@@ -44,34 +46,34 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                           | rating | review                                                                                                                                                                        |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Coubertin et l’exercice physique - Podcast Addict\|Cest plus compliqué que ça - Coubertin et l’exercice physique - Podcast Addict]]                                                               | 🟢     | Une super nouvelle, Jean-Christophe Piot fait une série d'épisodes spéciaux pour les JO et leur origine moderne. Du coup, j'en ai profité pour me refaire des vieux épisodes. |
-| [[Sources/Ce que j'ai écouté/Cest plus que de la SF - Mœbius, une vie - Christophe Quillien 208 - Podcast Addict\|Cest plus que de la SF - Mœbius, une vie - Christophe Quillien 208 - Podcast Addict]]                                                     | 🟢     | Super émission autour de Moebius j'ai vraiment aimé les discussion sur ce dessinateur impressionant.                                                                          |
-| [[Sources/Ce que j'ai écouté/Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 2 - Podcast Addict\|Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 2 - Podcast Addict]]           | 🟢     | Trop bien j'attendais cet épisode avec impatience et je suis très content, encore de nouvelles ressources pour le œuvres du domaine publique et de nouvelles idées.           |
-| [[Sources/Ce que j'ai écouté/Coup Critique - TOP 5 JDR  Découvertes jeux de rôles — mai 2024 - Podcast Addict\|Coup Critique - TOP 5 JDR  Découvertes jeux de rôles — mai 2024 - Podcast Addict]]                                                           | 🟢     | Une sélection de JDR qui m'ont l'air bien sympathique, j'avoue que les deux premiers, j'ai très envie de les découvrir.                                                       |
-| [[Sources/Ce que j'ai écouté/JDR Academy - HORRIFIQUE - Song of Madness (feat. Fred G) - Podcast Addict\|JDR Academy - HORRIFIQUE - Song of Madness (feat. Fred G) - Podcast Addict]]                                                                       | 🟢     | Une jeu que j'ai aimé découvrir et une partie que j'ai adorée jouer.                                                                                                          |
-| [[Sources/Ce que j'ai écouté/Luc Julia & IA  linterview 2024  Guillaume Vendé\|Luc Julia & IA  linterview 2024  Guillaume Vendé]]                                                                                                                           | 🟢     | Interview intéressante sur la place e l'IA et l'idée d'intelligence augmentée.                                                                                                |
-| [[Sources/Ce que j'ai écouté/Tech Café - Apple Intelligence - Podcast Addict\|Tech Café - Apple Intelligence - Podcast Addict]]                                                                                                                             | 🟢     | Un petit retour que la conférence Apple et des news sur l'espace cela faisait longtemps.                                                                                      |
-| [[Sources/Ce que j'ai écouté/TELOS - BANDE-ANNONCE – SAISON 1 - Podcast Addict\|TELOS - BANDE-ANNONCE – SAISON 1 - Podcast Addict]]                                                                                                                         | 🟢     | Excellente série de fictions audio, je trouve que l'épisode 50,6% fait pas mal écho à l'actualité en plus.                                                                    |
-| [[Sources/Ce que j'ai écouté/Chercheur dHabitudes - CH 1  Présentation - Attention TITRE Impressionnant qui donne envie ! - Podcast Addict\|Chercheur dHabitudes - CH 1  Présentation - Attention TITRE Impressionnant qui donne envie ! - Podcast Addict]] | 🟡     | J'ai commencé à écouter ce podcast qui sur le fond avait tout pour me plaire, mais je ne suis pas super convaincu, je trouve que c'est un peu léger.                          |
-| [[Sources/Ce que j'ai écouté/DataGen - 135 - Qlik  Racheter Talend et devenir un géant de la Data - Podcast Addict\|DataGen - 135 - Qlik  Racheter Talend et devenir un géant de la Data - Podcast Addict]]                                                 | 🟡     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Catherine de Médicis n’a pas déclenché la Saint-Barthélémy - Podcast Addict\|Cest plus compliqué que ça - Non, Catherine de Médicis n’a pas déclenché la Saint-Barthélémy - Podcast Addict]] | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Cléopâtre ne s’est pas tuée comme dans les films - Podcast Addict\|Cest plus compliqué que ça - Non, Cléopâtre ne s’est pas tuée comme dans les films - Podcast Addict]]                     | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Jésus nest (probablement) pas né un 25 décembre - Podcast Addict\|Cest plus compliqué que ça - Non, Jésus nest (probablement) pas né un 25 décembre - Podcast Addict]]                       | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, le suaire de Turin n’est pas celui du Christ - Podcast Addict\|Cest plus compliqué que ça - Non, le suaire de Turin n’est pas celui du Christ - Podcast Addict]]                             | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, les gladiateurs ne mourraient pas (tous) au combat - Podcast Addict\|Cest plus compliqué que ça - Non, les gladiateurs ne mourraient pas (tous) au combat - Podcast Addict]]                 | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Molière nest pas mort sur scène - Podcast Addict\|Cest plus compliqué que ça - Non, Molière nest pas mort sur scène - Podcast Addict]]                                                       | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Saliéri na pas tué Mozart - Podcast Addict\|Cest plus compliqué que ça - Non, Saliéri na pas tué Mozart - Podcast Addict]]                                                                   | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Chercheur dHabitudes - CH 2  Nos habitudes au quotidien - Podcast Addict\|Chercheur dHabitudes - CH 2  Nos habitudes au quotidien - Podcast Addict]]                                                                           | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Chercheur dHabitudes - CH 3  Pourquoi la motivation ne fait pas tout  - Podcast Addict\|Chercheur dHabitudes - CH 3  Pourquoi la motivation ne fait pas tout  - Podcast Addict]]                                               | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/Chercheur dHabitudes - CH 4  Arrêtez de tout oublier ! (mind maps et cartes mentales) - Podcast Addict\|Chercheur dHabitudes - CH 4  Arrêtez de tout oublier ! (mind maps et cartes mentales) - Podcast Addict]]               | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E01 – DÉPARTEMENTALE 167 - Podcast Addict\|TELOS - E01 – DÉPARTEMENTALE 167 - Podcast Addict]]                                                                                                                         | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E02 – CANDIDAT 1361 - Podcast Addict\|TELOS - E02 – CANDIDAT 1361 - Podcast Addict]]                                                                                                                                   | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E03 – 257° OUEST - Podcast Addict\|TELOS - E03 – 257° OUEST - Podcast Addict]]                                                                                                                                         | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E04 – SÉANCE N°31 - Podcast Addict\|TELOS - E04 – SÉANCE N°31 - Podcast Addict]]                                                                                                                                       | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E05 – PROTOCOLE 0 - Podcast Addict\|TELOS - E05 – PROTOCOLE 0 - Podcast Addict]]                                                                                                                                       | \-     | \-                                                                                                                                                                            |
-| [[Sources/Ce que j'ai écouté/TELOS - E06 – 50,6% - Podcast Addict\|TELOS - E06 – 50,6% - Podcast Addict]]                                                                                                                                                   | \-     | \-                                                                                                                                                                            |
+| file.name                                                                                                     | rating | source                                                                                    |
+| ------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------- |
+| Cest plus compliqué que ça - Coubertin et l’exercice physique - Podcast Addict                                | 🟢     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/177463830                   |
+| Cest plus que de la SF - Mœbius, une vie - Christophe Quillien 208 - Podcast Addict                           | 🟢     | https://podcastaddict.com/c-est-plus-que-de-la-sf/episode/177479795                       |
+| Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 2 - Podcast Addict      | 🟢     | https://podcastaddict.com/coup-critique/episode/177310516                                 |
+| Coup Critique - TOP 5 JDR  Découvertes jeux de rôles — mai 2024 - Podcast Addict                              | 🟢     | https://podcastaddict.com/coup-critique/episode/177128533                                 |
+| JDR Academy - HORRIFIQUE - Song of Madness (feat. Fred G) - Podcast Addict                                    | 🟢     | https://podcastaddict.com/jdr-academy/episode/177453543                                   |
+| Luc Julia & IA  linterview 2024  Guillaume Vendé                                                              | 🟢     | https://www.patreon.com/posts/105654740?utm_campaign=postshare_fan&amp;utm_source=android |
+| Tech Café - Apple Intelligence - Podcast Addict                                                               | 🟢     | https://podcastaddict.com/tech-cafe/episode/177571057                                     |
+| TELOS - BANDE-ANNONCE – SAISON 1 - Podcast Addict                                                             | 🟢     | https://podcastaddict.com/telos/episode/172872697                                         |
+| Chercheur dHabitudes - CH 1  Présentation - Attention TITRE Impressionnant qui donne envie ! - Podcast Addict | 🟡     | https://podcastaddict.com/chercheur-d-habitudes/episode/142581949                         |
+| DataGen - 135 - Qlik  Racheter Talend et devenir un géant de la Data - Podcast Addict                         | 🟡     | https://podcastaddict.com/datagen/episode/177619106                                       |
+| Cest plus compliqué que ça - Non, Catherine de Médicis n’a pas déclenché la Saint-Barthélémy - Podcast Addict | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/162437712                   |
+| Cest plus compliqué que ça - Non, Cléopâtre ne s’est pas tuée comme dans les films - Podcast Addict           | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/161445023                   |
+| Cest plus compliqué que ça - Non, Jésus nest (probablement) pas né un 25 décembre - Podcast Addict            | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/168851400                   |
+| Cest plus compliqué que ça - Non, le suaire de Turin n’est pas celui du Christ - Podcast Addict               | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/162102275                   |
+| Cest plus compliqué que ça - Non, les gladiateurs ne mourraient pas (tous) au combat - Podcast Addict         | \-     | <ul><li>https://podcastaddict.com/c-est-plus-complique-que-ca/episode/161099253</li></ul> |
+| Cest plus compliqué que ça - Non, Molière nest pas mort sur scène - Podcast Addict                            | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/160434855                   |
+| Cest plus compliqué que ça - Non, Saliéri na pas tué Mozart - Podcast Addict                                  | \-     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/160767776                   |
+| Chercheur dHabitudes - CH 2  Nos habitudes au quotidien - Podcast Addict                                      | \-     | https://podcastaddict.com/chercheur-d-habitudes/episode/144057381                         |
+| Chercheur dHabitudes - CH 3  Pourquoi la motivation ne fait pas tout  - Podcast Addict                        | \-     | https://podcastaddict.com/chercheur-d-habitudes/episode/146710769                         |
+| Chercheur dHabitudes - CH 4  Arrêtez de tout oublier ! (mind maps et cartes mentales) - Podcast Addict        | \-     | https://podcastaddict.com/chercheur-d-habitudes/episode/148952284                         |
+| TELOS - E01 – DÉPARTEMENTALE 167 - Podcast Addict                                                             | \-     | https://podcastaddict.com/telos/episode/172872733                                         |
+| TELOS - E02 – CANDIDAT 1361 - Podcast Addict                                                                  | \-     | https://podcastaddict.com/telos/episode/173056535                                         |
+| TELOS - E03 – 257° OUEST - Podcast Addict                                                                     | \-     | https://podcastaddict.com/telos/episode/173070014                                         |
+| TELOS - E04 – SÉANCE N°31 - Podcast Addict                                                                    | \-     | https://podcastaddict.com/telos/episode/173070015                                         |
+| TELOS - E05 – PROTOCOLE 0 - Podcast Addict                                                                    | \-     | https://podcastaddict.com/telos/episode/173070016                                         |
+| TELOS - E06 – 50,6% - Podcast Addict                                                                          | \-     | https://podcastaddict.com/telos/episode/173070018                                         |
 
 { .block-language-dataview}
 
@@ -79,16 +81,16 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                            | date       | status |
-| ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]] | 2023-12-12 | \-     |
+| file.name                            | rating | source |
+| ------------------------------------ | ------ | ------ |
+| Ceux qui luttaient dans les ténèbres | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -96,9 +98,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
-
-
