--- a/src/site/notes/Calendrier/Semaines/2024-26.md
+++ b/src/site/notes/Calendrier/Semaines/2024-26.md
@@ -10,16 +10,18 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                     | rating | review                                                                                                                                                                      |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/Demon Slayer  Kimetsu no Yaiba\|Demon Slayer  Kimetsu no Yaiba]]                                                                                                             | 🟢     | Saison très sympa, mais comme toujours un peu courte                                                                                                                        |
-| [[Sources/Ce que j'ai vu/How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary\|How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary]] | 🟢     | reportage sur une tradition assez impressionnante qui m'inspire pas mal d'idée pour du jdr                                                                                  |
-| [[Sources/Ce que j'ai vu/Furiosa Une saga Mad Max\|Furiosa Une saga Mad Max]]                                                                                                                         | 🟡     | Pas super fan, trop de violence et de gore pour moi.                                                                                                                        |
-| [[Sources/Ce que j'ai vu/Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité\|Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité]]                 | 🟡     | c'est fun à regarder, c'est un show avec en plus des gens qui surjoue, c'est très drôle. Ça donne des idées pour intégrer des concours de cuisine dans des scénarios de jdr |
+| file.name                                                                            | rating | source                                                               |
+| ------------------------------------------------------------------------------------ | ------ | -------------------------------------------------------------------- |
+| Demon Slayer  Kimetsu no Yaiba                                                       | 🟢     | https://www.imdb.com/title/tt26537229/                               |
+| How a Bulgarian Village Dances Evil Spirits Away  Kukeri  The New Yorker Documentary | 🟢     | https://www.youtube.com/watch?v=LsmAUHeuWOE&amp;list=LL&amp;index=17 |
+| Furiosa Une saga Mad Max                                                             | 🟡     | https://www.imdb.com/title/tt12037194/                               |
+| Iron Chef Mexique (Série télévisée 2022– ) ⭐ 6.6  Jeu télévisé, Télé-réalité         | 🟡     | https://www.imdb.com/title/tt21439566/                               |
 
 { .block-language-dataview}
 
@@ -27,11 +29,11 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                                                                                               | rating | review                                                                                                                            |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 294\|Dense Discovery – Issue 294]]                                                                                                                                             | 🟢     | Une réflexion sur le capitalisme, ces travers et comment essayer de les modifier.                                                 |
-| [[Sources/Ce que j'ai lu/France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes\|France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes]] | 🟢     | Une information plutôt inquiétante, je trouve sur l'utilisation d'IA et d'algorithme pour classer les chômeurs et les surveiller. |
-| [[Sources/Ce que j'ai lu/Research without the hassle 4 steps to remove friction from your research\|Research without the hassle 4 steps to remove friction from your research]]                                                 | \-     | \-                                                                                                                                |
+| file.name                                                                                         | rating | source                                                                                                                           |
+| ------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------- |
+| Dense Discovery – Issue 294                                                                       | 🟢     | https://www.densediscovery.com/issues/294                                                                                        |
+| France Travail (ex Pôle emploi) épinglé par la Quadrature du Net pour son recours aux algorithmes | 🟢     | https://www.01net.com/actualites/france-travail-ex-pole-emploi-epingle-par-la-quadrature-du-net-pour-son-usage-dalgorithmes.html |
+| Research without the hassle 4 steps to remove friction from your research                         | \-     | \-                                                                                                                               |
 
 { .block-language-dataview}
 
@@ -39,13 +41,13 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                               | rating | review                                                                                                                                                                    |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict\|Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict]] | 🟢     | une réflexion sur l'autodiscipline ou plutôt en fait la force des habitudes, épisode pas mal                                                                              |
-| [[Sources/Ce que j'ai écouté/CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict\|CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict]]                                                                                                       | 🟢     | Super émission autour de Carrie, le sujet est vraiment exploré, je trouve et c'est captivant.                                                                             |
-| [[Sources/Ce que j'ai écouté/Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict\|Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict]]                                             | 🟢     | des inspirations lecture qui ont l'air très sympa                                                                                                                         |
-| [[Sources/Ce que j'ai écouté/Tech Café - Vidéos, sons et avatars VRP - Podcast Addict\|Tech Café - Vidéos, sons et avatars VRP - Podcast Addict]]                                                                                               | 🟢     | comme toujours un suivi de l'actu tech, avec les IA génératrices de vidéo des PC député et bien sûr les fameux bot twitter qui donnent des recettes de tarte aux fraises. |
-| [[Sources/Ce que j'ai écouté/Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict\|Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict]]                                                                                   | 🟡     | épisode avec pas mal de choses intéressante mais avec un rythme un peu étrange et comme c'était en différé moins d'échanges.                                              |
+| file.name                                                                                               | rating | source                                                     |
+| ------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------- |
+| Build Yourself - Comment cultiver lAUTODISCIPLINE et transformer sa vie  mes secrets ! - Podcast Addict | 🟢     | https://podcastaddict.com/build-yourself/episode/177960886 |
+| CAPTURE MAG - MONSTER SQUAD  CARRIE - Podcast Addict                                                    | 🟢     | https://podcastaddict.com/capture-mag/episode/177730841    |
+| Coup Critique - INSPIRATION JDR  Au fil de mes lectures 2 (2024) - Podcast Addict                       | 🟢     | https://podcastaddict.com/coup-critique/episode/178051834  |
+| Tech Café - Vidéos, sons et avatars VRP - Podcast Addict                                                | 🟢     | https://podcastaddict.com/tech-cafe/episode/178312650      |
+| Big Data Hebdo - Episode 198  IA Gen et Anssi - Podcast Addict                                          | 🟡     | https://podcastaddict.com/big-data-hebdo/episode/178284153 |
 
 { .block-language-dataview}
 
@@ -53,16 +55,16 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                            | date       | status |
-| ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]] | 2023-12-12 | \-     |
+| file.name                            | rating | source |
+| ------------------------------------ | ------ | ------ |
+| Ceux qui luttaient dans les ténèbres | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -70,9 +72,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
-
-
