--- a/src/site/notes/Calendrier/Semaines/2024-27.md
+++ b/src/site/notes/Calendrier/Semaines/2024-27.md
@@ -10,16 +10,18 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                                                                                                                               |
-| -------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/Cardboard Plugin The Best Way to Manage Tasks in Obsidian\|Cardboard Plugin The Best Way to Manage Tasks in Obsidian]] | 🟢     | Un plugin conseillé par Stéphane sur Mastodon pour gérer ses tâches qui effectivement est très intéressant, il faut que je le mette à l'épreuve sur un projet perso pour voir s'il peut rentrer dans mon workflow.                                                                                                                                                                                   |
-| [[Sources/Ce que j'ai vu/How HACKERS Take Notes!! (Obsidian & More)\|How HACKERS Take Notes!! (Obsidian & More)]]                               | 🟢     | Une vidéo sympa surtout sur les différents plugins, actuellement, je teste le thème conseillé qui est très simple et minimaliste ainsi que le plugin Various Complément qui fait une sorte d'autocomplétion en proposition comme un éditeur de code.                                                                                                                                                 |
-| [[Sources/Ce que j'ai vu/Obsidian update version 1.6\|Obsidian update version 1.6]]                                                             | 🟢     | Point positif de cet update pour moi : La rapidité de lancement sur mobile qui marche vraiment mieux. Autre point super important, la gestion de vault dans des vault qui à mon avis va me permettre d'avoir une vault générale avec des vault par domaine / projet suivant la taille de ces derniers. Dans l'idée plus besoin de séparée vault perso et pro (sauf raison de confidentialité forte.) |
-| [[Sources/Ce que j'ai vu/Suicide Squad Isekai\|Suicide Squad Isekai]]                                                                           | 🟢     | Super série, l'univers de DC en animé avec des personnages bien décalé, c'est très bon.                                                                                                                                                                                                                                                                                                              |
+| file.name                                                 | rating | source                                                               |
+| --------------------------------------------------------- | ------ | -------------------------------------------------------------------- |
+| Cardboard Plugin The Best Way to Manage Tasks in Obsidian | 🟢     | https://www.youtube.com/watch?v=umYEe9CwduM                          |
+| How HACKERS Take Notes!! (Obsidian & More)                | 🟢     | https://www.youtube.com/watch?v=eLqQo38wC2Q                          |
+| Obsidian update version 1.6                               | 🟢     | https://www.youtube.com/watch?v=vpNx4izW5RM                          |
+| Suicide Squad Isekai                                      | 🟢     | <ul><li>https://fr.wikipedia.org/wiki/Suicide_Squad_Isekai</li></ul> |
 
 { .block-language-dataview}
 
@@ -27,22 +29,22 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Construire un second cerveau\|Construire un second cerveau]]                                                                                                                                                                             | 🟢     | En cours de lecture, c'est de là que vient l'idée de partager les livres en cours de lecture et le fait que je lise comme un anglais du début des temps moderne.                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai lu/Cybermalveillance.gouv.fr, censée protéger les Français des hackers, elle-même victime dune usurpation didentité !\|Cybermalveillance.gouv.fr, censée protéger les Français des hackers, elle-même victime dune usurpation didentité !]] | 🟢     | La news moche, le site qui alerte sur les actes de cyber malveillance est lui-même utilisé pour des actes de cyber malveillance, des emails sont envoyés avec l'adresse de ce site en disant à ceux qui les reçoivent qu'ils ont été victime d'un hack… Moche.                                                                                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai lu/L'art du game design\|L'art du game design]]                                                                                                                                                                                             | 🟢     | Livre intéressant qu'il faut que je reprenne, je l'ai mis de côté, car j'ai travaillé sur d'autres projets que la création de jeu ces derniers temps.                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai lu/Le bruit des bots  comment la Russie manipule les élections législatives en soutenant lextrême droite\|Le bruit des bots  comment la Russie manipule les élections législatives en soutenant lextrême droite]]                           | 🟢     | Un article qui m'a fait beaucoup réfléchir sur l'impact d'internet des bots et des fermes de bot dans les décisions mondiales et sur les populations des pays. De mon point de vue les grandes plateformes qui ne régulent pas ces trafique sont autant coupables que les pays / organismes qui mettent en place ces campagnes de propagande. J'imagine quand même qu'il doit exister des solutions pour empêcher ce genre de chose.                                                                                                                                                                     |
-| [[Sources/Ce que j'ai lu/Le Cycle de Providence\|Le Cycle de Providence]]                                                                                                                                                                                         | 🟢     | Dans le but de mieux appréhender la gestion de l'horreur lovecraftienne dans mes projets en cours, je relis l'intégrale. Des nouvelles que j'aime toujours autant, d'autre un peu moins, mais dans l'ensemble ce tome autour de providence est quand même très bon.                                                                                                                                                                                                                                                                                                                                      |
-| [[Sources/Ce que j'ai lu/Mastering Apache Camel\|Mastering Apache Camel]]                                                                                                                                                                                         | 🟢     | Plusieurs déconvenues dans le cadre de mon travail, j'ai décidé de monter en compétence sur le langage Camel notament quand il est en lien avec le serveur d'application Karaf. Cela ne vous dit sans doute pas grand-chose, mais je monte une architecture ESB orientés services actuellement et j'ai ressenti le besoin de mieux maitriser Camel et les Enterprise Integration Pattern afin de mettre en place des solutions aisément maintenable. Le problème c'est que pour que se soit simple pour les autres ensuite il faut bien qu'un gus se soit tapé la simplification de la complexité avant… |
-| [[Sources/Ce que j'ai lu/MDM\|MDM]]                                                                                                                                                                                                                               | 🟢     | Dans la continuité de Camel, retour aux sources et aux principes fondamentaux pour être sûr de ne pas oublier une étape ou un process important dans l'architecture en cours de réalisation et donc je reprends les bases de la logique et méthodologie autour de la gestion de données de référence.                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai lu/OpenCanary – Le pot de miel pour piéger les cyber criminels\|OpenCanary – Le pot de miel pour piéger les cyber criminels]]                                                                                                               | 🟢     | En solution au moins pour les cyber criminel, on a ceci : Open Canary une sorte de piège à hacker. C'est comme si un PC vulnérable arrivait sur internet les hackers se jettent dessus et… on récupère des informations sur eux, leur localisation etc…                                                                                                                                                                                                                                                                                                                                                  |
-| [[Sources/Ce que j'ai lu/PKM Weekly – 2024-06-29 – PKM Weekly\|PKM Weekly – 2024-06-29 – PKM Weekly]]                                                                                                                                                             | 🟢     | Une newsletter de veille sur les sorties des évolutions des grands systèmes de PKM actuel, c'est pas mal fait, ça permet aussi de voir ce qui se fait en dehors d'Obsidian.                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| [[Sources/Ce que j'ai lu/Stealing Cthulhu\|Stealing Cthulhu]]                                                                                                                                                                                                     | 🟢     | en lien avec mes projets de [[Sources/JDR/JDR\|JDR]] je me plonge dans ce livre qui analyse justement l'horreur lovecraftienne dans l'angle de la mise en place de scénario de jeu de rôle. Il y a vraiment beaucoup d'inspiration et de conseils qui sont assez denses à digérer, mais qui me parlent énormément.                                                                                                                                                                                                                                                                                       |
-| [[Sources/Ce que j'ai lu/The One Thing Passez à l'essentiel\|The One Thing Passez à l'essentiel]]                                                                                                                                                                 | 🟢     | Livre que je trouvais intéressant, mais que je n'ai pas encore repris, il y a de bonnes idées, quand e regarde les notes que j'ai prise, je vois que la plupart des choses me parlent encore, mais elles font aussi un peu doublons dans mon esprit avec ce que j'ai déjà lu dans [[Sources/Ce que j'ai lu/S'organiser pour réussir\|GTD]] ou [[Sources/Ce que j'ai lu/Deep work retrouver la concentration dans un monde de distractions\|Deep Work]] donc je pense que c'est pour ça que je n'ai pas encore repris cette lecture. Mais rien n'est perdu.                                                                                             |
-| [[Sources/Ce que j'ai lu/Tiago Forte on LinkedIn This is my checklist for my Weekly Review, which I keep in a little yellow…\|Tiago Forte on LinkedIn This is my checklist for my Weekly Review, which I keep in a little yellow…]]                               | 🟢     | Un exemple de routine hebdomadaire de [[Sources/Personnes/Tiago Forte\|Tiago Forte]], à adapter bien sûr à son besoin, mais ça donne des idées.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai lu/noplace, a mashup of Twitter and Myspace for Gen Z, hits No. 1 on the App Store  TechCrunch\|noplace, a mashup of Twitter and Myspace for Gen Z, hits No. 1 on the App Store  TechCrunch]]                                               | 🟡     | Lancement d'un nouveau réseau social qui semble déjà cartonné, un Twitter avec des customisations de thème chelou à la Myspace de la grande époque. On verra si ça fonctionne ou pas.                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai lu/Apprendre Markdown\|Apprendre Markdown]]                                                                                                                                                                                                 | \-     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| file.name                                                                                                          | rating | source                                                                                                                                                                                |
+| ------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Construire un second cerveau                                                                                       | 🟢     | <ul><li>https://c3po.link/QhMR93ec78</li></ul>                                                                                                                                        |
+| Cybermalveillance.gouv.fr, censée protéger les Français des hackers, elle-même victime dune usurpation didentité ! | 🟢     | https://www.clubic.com/actualite-531285-cybermalveillance-gouv-fr-censee-proteger-les-francais-des-hackers-elle-meme-victime-d-une-usurpation-d-identite.html                         |
+| L'art du game design                                                                                               | 🟢     | <ul><li>https://c3po.link/Q9g46EcZy4</li></ul>                                                                                                                                        |
+| Le bruit des bots  comment la Russie manipule les élections législatives en soutenant lextrême droite              | 🟢     | https://bonpote.com/le-bruit-des-bots-comment-la-russie-manipule-les-elections-legislatives-en-soutenant-lextreme-droite/                                                             |
+| Le Cycle de Providence                                                                                             | 🟢     | <ul><li>https://c3po.link/QChtMtXHpT</li></ul>                                                                                                                                        |
+| Mastering Apache Camel                                                                                             | 🟢     | \-                                                                                                                                                                                    |
+| MDM                                                                                                                | 🟢     | <ul><li>https://c3po.link/QJTwCPkzqp</li></ul>                                                                                                                                        |
+| OpenCanary – Le pot de miel pour piéger les cyber criminels                                                        | 🟢     | https://korben.info/opencanary-pot-de-miel-ultime-pieger-hackers.html                                                                                                                 |
+| PKM Weekly – 2024-06-29 – PKM Weekly                                                                               | 🟢     | https://pkm-weekly.com/pkm-weekly-2024-06-29/                                                                                                                                         |
+| Stealing Cthulhu                                                                                                   | 🟢     | \-                                                                                                                                                                                    |
+| The One Thing Passez à l'essentiel                                                                                 | 🟢     | <ul><li>https://c3po.link/QPRFJhN7V4</li></ul>                                                                                                                                        |
+| Tiago Forte on LinkedIn This is my checklist for my Weekly Review, which I keep in a little yellow…                | 🟢     | https://www.linkedin.com/posts/tiagoforte_this-is-my-checklist-for-my-weekly-review-activity-7213179604818087936-TXSc?utm_source=combined_share_message&amp;utm_medium=member_android |
+| noplace, a mashup of Twitter and Myspace for Gen Z, hits No. 1 on the App Store  TechCrunch                        | 🟡     | https://techcrunch.com/2024/07/03/noplace-a-mashup-of-twitter-and-myspace-for-gen-z-hits-no-1-on-the-app-store/?guccounter=1                                                          |
+| Apprendre Markdown                                                                                                 | \-     | \-                                                                                                                                                                                    |
 
 { .block-language-dataview}
 
@@ -50,16 +52,16 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                         | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Coubertin, le sport comme levier de la paix - Podcast Addict\|Cest plus compliqué que ça - Coubertin, le sport comme levier de la paix - Podcast Addict]]                                       | 🟢     | Les deux derniers épisodes sur la création des jeux moderne par le baron Coubertin moins glorieux pour ce monsieur, mais vraiment très intéressant.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai écouté/Cest plus compliqué que ça - Non, Coubertin nétait pas (totalement) opposé au sport féminin - Podcast Addict\|Cest plus compliqué que ça - Non, Coubertin nétait pas (totalement) opposé au sport féminin - Podcast Addict]] | 🟢     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/Naufragés - une histoire vraie - Ada Blackjack, la Robinson de lArctique - Podcast Addict\|Naufragés - une histoire vraie - Ada Blackjack, la Robinson de lArctique - Podcast Addict]]                                       | 🟢     | Un très bon podcast sur des histoires de survivants, je pense que Riley va les apprécier s'il ne connait pas déjà, j'ai écouté trois épisodes très différents, mais tousétaientt bien réalisé et intéressant.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| [[Sources/Ce que j'ai écouté/Naufragés - une histoire vraie - Le voyage sans retour du Bounty  Le capitaine abandonné - Podcast Addict\|Naufragés - une histoire vraie - Le voyage sans retour du Bounty  Le capitaine abandonné - Podcast Addict]]       | 🟢     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/Naufragés - une histoire vraie - Vol 571, les survivants des Andes - Podcast Addict\|Naufragés - une histoire vraie - Vol 571, les survivants des Andes - Podcast Addict]]                                                   | 🟢     | \-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai écouté/POURQUOI BUFFY C EST GENIAL - PBCG 59 NIGHTMARES - Podcast Addict\|POURQUOI BUFFY C EST GENIAL - PBCG 59 NIGHTMARES - Podcast Addict]]                                                                                       | 🟢     | Cool un nouvel épisode de PBCG content de revoir l'équipe et gros bisous à clément, bienvenue à votre nouveau membre ! Et on attend le prochain très vite puisque j'espère que vous en avez fait un pour l'anniversaire des 10 ans cette semaine.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| [[Sources/Ce que j'ai écouté/Tech Café - 1 million de dollars à gagner avec lARC Prize ! - Podcast Addict\|Tech Café - 1 million de dollars à gagner avec lARC Prize ! - Podcast Addict]]                                                                 | 🟢     | Encore un épisode complet pour suivre l'actu tech, je retiendrai ces points : La transcendance des IAs, ou comment des modèles vont réussir à dépasser leurs données d'entrainement et la représentation de platon pour les IAs, tous les modèles vont-ils finir par tendre vers des représentations similaires des mêmes concepts ? Mais allez écouter l'épisode ça sera sans doute plus clair après.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| [[Sources/Ce que j'ai écouté/Tech Café - Pub à base dIA - Podcast Addict\|Tech Café - Pub à base dIA - Podcast Addict]]                                                                                                                                   | 🟢     | Bon c'est officiel, …y a maintenant des pubs vidéo entièrement faites avec l'IA. Mais le point que je retiens et qui me f'it le plus peur pou' l'av'nir…internet, c'est cette histoire de crawling abusif que font certaines boites IA afin de récupérer les données d'entrainement : bypass des robits.txt, des paywall et autres… pour pomper les données. Après tout même Microsoft dit que si c'est sur le net gratuitement, c'est à disposition de tout le monde… Je sens que …virage qui est en train d'être pris est très mauvais pour l'avenir de la création e…u contenu sur internet. D'un autre côté ça veut dire qu'on peut pomper et exploiter librement tout ce que Microsoft met en gratuit sur le net ? tous les services gratuits on peut les prendre et les faire à notre sauce… j'ai bien peur que non, et que cette récupération ne soit en fait qu'à sens unique… |
+| file.name                                                                                                    | rating | source                                                                   |
+| ------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------ |
+| Cest plus compliqué que ça - Coubertin, le sport comme levier de la paix - Podcast Addict                    | 🟢     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/178231212  |
+| Cest plus compliqué que ça - Non, Coubertin nétait pas (totalement) opposé au sport féminin - Podcast Addict | 🟢     | https://podcastaddict.com/c-est-plus-complique-que-ca/episode/178667270  |
+| Naufragés - une histoire vraie - Ada Blackjack, la Robinson de lArctique - Podcast Addict                    | 🟢     | https://podcastaddict.com/naufrages-une-histoire-vraie/episode/177232260 |
+| Naufragés - une histoire vraie - Le voyage sans retour du Bounty  Le capitaine abandonné - Podcast Addict    | 🟢     | https://podcastaddict.com/naufrages-une-histoire-vraie/episode/175683875 |
+| Naufragés - une histoire vraie - Vol 571, les survivants des Andes - Podcast Addict                          | 🟢     | https://podcastaddict.com/naufrages-une-histoire-vraie/episode/175683913 |
+| POURQUOI BUFFY C EST GENIAL - PBCG 59 NIGHTMARES - Podcast Addict                                            | 🟢     | https://podcastaddict.com/pourquoi-buffy-c-est-genial/episode/178656053  |
+| Tech Café - 1 million de dollars à gagner avec lARC Prize ! - Podcast Addict                                 | 🟢     | https://podcastaddict.com/tech-cafe/episode/178488001                    |
+| Tech Café - Pub à base dIA - Podcast Addict                                                                  | 🟢     | https://podcastaddict.com/tech-cafe/episode/178714961                    |
 
 { .block-language-dataview}
 
@@ -67,15 +69,15 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File | date | status |
-| ---- | ---- | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -83,10 +85,8 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                                                                                                  | rating | review                                                                                          |
-| ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------- |
-| [[Sources/Ce à quoi j'ai joué/Nebraska Smith and the Mask of Minkhamanna by Gugames.eu\|Nebraska Smith and the Mask of Minkhamanna by Gugames.eu]] | 🟢     | Un petit point click qui m'a beaucoup fait rigolé et qui me donne vraiment envie d'en créer un. |
+| file.name                                                | rating | source                              |
+| -------------------------------------------------------- | ------ | ----------------------------------- |
+| Nebraska Smith and the Mask of Minkhamanna by Gugames.eu | 🟢     | https://gugames.itch.io/minkhamanna |
 
 { .block-language-dataview}
-
-
