--- a/src/site/notes/Calendrier/Semaines/2024-19.md
+++ b/src/site/notes/Calendrier/Semaines/2024-19.md
@@ -1,9 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/calendrier/semaines/2024-19/","title":"2024-19"}
+{"dg-publish":true,"permalink":"/calendrier/semaines/2024-19/","title":"Cette semaine"}
 ---
 
-
-# 2024-19
 
 # Cette semaine
 
@@ -12,17 +10,19 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                       |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/How to use QuickAdd for Obsidian - with examples\|How to use QuickAdd for Obsidian - with examples]]                                                   | 🟢     | La vidéo à avoir de côté pour se faire une piqure de rappel sur toutes les possibilités de ce plugin : ajout à la volée dans des notes statiques ou dynamiques, ajout de note, rajout de méta donnée. Bref comment mettre des raccourcit sur séries d'action, un peu comme créer ses macros. |
-| [[Sources/Ce que j'ai vu/Le Coeur A Ses Raisons S01E01\|Le Coeur A Ses Raisons S01E01]]                                                                                         | 🟢     | On regarde de nouveau la série avec ma femme. C'est toujours aussi absurde et drôle. Je suis sur qu'on pourrait utiliser passion de las passiones pour en faire une adpatation en JDR. En tout cas une série bien pour se vider la tête :)                                                   |
-| [[Sources/Ce que j'ai vu/Obsidian AI Testing - Nous Hermes 2 Mistral DPO 7B\|Obsidian AI Testing - Nous Hermes 2 Mistral DPO 7B]]                                               | 🟢     | Un modèle LLLM qui> donne envie d'être testé comme assistant dans Obsidian. Je n'ai pas encore eu le temps de vraiment le faire, mais ça ne serait tardé. De plus une série de questions orienté Obsidian plutôt intéressante.                                                               |
-| [[Sources/Ce que j'ai vu/The Excalidraw-Obsidian Showcase 57 key features in just 17 minutes\|The Excalidraw-Obsidian Showcase 57 key features in just 17 minutes]]             | 🟢     | Vraiment une vidéo à se garder sous le coude pour se rappeler tout ce que peut faire le plugin Excalidraw. Après c'est quand même rapide pour vraiment assimiler toutes les ffonctionnalitésmais ça fait un bon résumé.                                                                      |
-| [[Sources/Ce que j'ai vu/Forged in Fire (Série télévisée 2015– ) ⭐ 8.2  Jeu télévisé, Télé-réalité\|Forged in Fire (Série télévisée 2015– ) ⭐ 8.2  Jeu télévisé, Télé-réalité]] | 🟡     | Je ne sais pas pourquoi je tombe à chaque sur ces épisodes et je reste scotché, c'est tellement improbable et tellement impressionnant. Bref une émission qui vide la tête, mais ne casse pas 3 pattes à un canard.                                                                          |
+| file.name                                                                 | rating | source                                                                                                    |
+| ------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------- |
+| How to use QuickAdd for Obsidian - with examples                          | 🟢     | <ul><li>https://www.youtube.com/watch?v=gYK3VDQsZJo</li></ul>                                             |
+| Le Coeur A Ses Raisons S01E01                                             | 🟢     | <ul><li>https://www.youtube.com/watch?v=MHmcAlrSaRo&amp;list=PLRetUrNI2Rc0AH2A94bDi0EzltK3I7pVQ</li></ul> |
+| Obsidian AI Testing - Nous Hermes 2 Mistral DPO 7B                        | 🟢     | <ul><li>https://www.youtube.com/watch?v=3HDN60texis</li></ul>                                             |
+| The Excalidraw-Obsidian Showcase 57 key features in just 17 minutes       | 🟢     | <ul><li><https://www.youtube.com/watch?v=P_Q6avJGoWI></li></ul>                                           |
+| Forged in Fire (Série télévisée 2015– ) ⭐ 8.2  Jeu télévisé, Télé-réalité | 🟡     | <ul><li>https://www.imdb.com/title/tt4680444/?ref_=fn_al_tt_1</li></ul>                                   |
 
 { .block-language-dataview}
 
@@ -30,10 +30,10 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                             | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| -------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Newsletter daprès 10 ans\|Newsletter daprès 10 ans]] | 🟢     | La newsletter de Podcloud qui revient, bonne nouvelle. Pour moi deux grosses informations : Spotify qui ne se certifie pas IAB et la création d'un évènement podcast : PodParis !                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai lu/S'organiser pour réussir\|S'organiser pour réussir]] | 🟢     | La fameuse méthode GTD (Getting things done) j'ai lu enfin plutôt relu ce livre qui est à la base de beaucoup de chose qu'on trouve autour des PKM et des logiciels tel qu'Obsidian. Les méthodes PARA, CODE, ACCESS et autres sont souvent des adaptations au numérique des principes qui ont été posés par David Allen. Un livre qui possède plein de bonnes choses sur lesquels réfléchir voir les mettre en place. La promesse : Une productivité sans stress. Plutôt alléchant dit comme ça, et le livre nous donne à la fois des méthodes, mais aussi des astuces sur la façon dont l'auteur pense arriver au résultat. Du coup, je repense pas mal mon [[Atlas/Organisation du PKM\|Organisation du PKM]] en améliorant la capture et aussi l'organisation, j'étais passé à côté de certaines choses la première fois ou alors ça ne m'avait pas parlé et du coup, je suis curieux de tester ce que j'ai l'impression d'avoir manqué ou d'avoir maintenant mieux compris. |
+| file.name                | rating | source                                                                                            |
+| ------------------------ | ------ | ------------------------------------------------------------------------------------------------- |
+| Newsletter daprès 10 ans | 🟢     | <ul><li>https://infos.podcloud.fr/la-meteo/newsletter-apres-10/?ref=la-meteo-newsletter</li></ul> |
+| S'organiser pour réussir | 🟢     | <ul><li>https://c3po.link/Qda7rKrKQ6</li></ul>                                                    |
 
 { .block-language-dataview}
 
@@ -41,10 +41,10 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                           | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict\|Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict]]                                                                     | 🟢     | Ce qui m'a le plus interpellé dans cet épisode est le rapport sur l'exposition des jeunes aux écrans. C'est un problème auquel je fais face au quotidien et on a beau essayer de faire de notre mieux maintenant les écrans sont partout et même dans les couloirs du métro. Et je pense que le législateur, même s'il n'a pas pouvoir à réguler le chez-soi des gens, devrait essayer déjà de réguler la voie publique ou semi-publique. Autre point, Shremps (l'homme grâce à qui nous avons le RGPD désormais) qui attaque ChatGPT, je trouve que c'est une bonne chose. Les entreprises de la tech ne veulent pas jouer fair-play, on le voit bien avec les données personnelles, les cookies etc. leur but, vendre et utiliser vos données sans rien débourser. Comme elles continuent en donnant à manger tout et n'importe quoi aux IAs, je trouve que c'est un juste retour de bâton que ça leur tombe dessus. |
-| [[Sources/Ce que j'ai écouté/Tech Sources  les sources des experts de la Tech - PKM, Second Cerveau, Productivité - Podcast Addict\|Tech Sources  les sources des experts de la Tech - PKM, Second Cerveau, Productivité - Podcast Addict]] | 🟢     | Je ne m'attendais pas à ça, mais je suis surpris sur pas mal d'informations et de discussion dans ce podcast notament sur la responsabilité des créateurs de contenus, l'idée e bruit autour des sujets disponibles sur le net, la justification des info produits. Je trouve ça plutôt intéressant et ça me fait beaucoup réfléchir. Je me demande si je ne vais pas essayer de me mettre plus sur le créneau du PKM en français et partagé via le blog et le podcast dans un premier temps des informations et concept plus travaillés et plus qualitatifs.                                                                                                                                                                                                                                                                                                                                                          |
+| file.name                                                                                             | rating | source                                                                                      |
+| ----------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------- |
+| Tech Café - Lâge dor de la réparation (ou presque) - Podcast Addict                                   | 🟢     | <ul><li>https://podcastaddict.com/tech-cafe/episode/175400830</li></ul>                     |
+| Tech Sources  les sources des experts de la Tech - PKM, Second Cerveau, Productivité - Podcast Addict | 🟢     | https://podcastaddict.com/tech-sources-les-sources-des-experts-de-la-tech/episode/173669236 |
 
 { .block-language-dataview}
 
@@ -52,26 +52,26 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                                                                         | date       | status |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Atlas/Organisation avec les Tags\|Organisation avec les Tags]]                                                                                                          | 2024-05-07 | \-     |
-| [[Idées/Pkm démarche de capture, puis extraction de morceaux choisis \|Pkm démarche de capture, puis extraction de morceaux choisis ]]                                    | 2024-05-09 | \-     |
-| [[Idées/Publier ou oublier une lettre un rang dans l'alphabet les sépare\|Publier ou oublier une lettre un rang dans l'alphabet les sépare]]                              | 2024-05-09 | \-     |
-| [[Idées/Retravailler le système D100 en m'inspirant d'Aria\|Retravailler le système D100 en m'inspirant d'Aria]]                                                          | 2024-05-09 | \-     |
-| [[Idées/Un jeu de gestion avec le point de vue bébé et le point de vue parents\|Un jeu de gestion avec le point de vue bébé et le point de vue parents]]                  | 2024-05-09 | \-     |
-| [[Idées/Un parc d'attraction hanté ou abandonné dans un jeu de role\|Un parc d'attraction hanté ou abandonné dans un jeu de role]]                                        | 2024-05-09 | \-     |
-| [[Inbox/Faire une liste de mes limites\|Faire une liste de mes limites]]                                                                                                  | 2024-05-09 | \-     |
-| [[Inbox/Revoir - 1 - La prise de notes pour la formation PKM\|Revoir - 1 - La prise de notes pour la formation PKM]]                                                      | 2024-05-09 | \-     |
-| [[Pro/01.Ressources/Carrière/Faire un bilan professionnel, et voir l'avenir sur les 5 horizon gtd\|Faire un bilan professionnel, et voir l'avenir sur les 5 horizon gtd]] | 2024-05-09 | \-     |
-| [[Projects/Formation/Créer et vendre une formation Obsidian\|Créer et vendre une formation Obsidian]]                                                                     | 2024-05-09 | \-     |
+| file.name                                                              | rating | source |
+| ---------------------------------------------------------------------- | ------ | ------ |
+| Organisation avec les Tags                                             | \-     | \-     |
+| Pkm démarche de capture, puis extraction de morceaux choisis           | \-     | \-     |
+| Publier ou oublier une lettre un rang dans l'alphabet les sépare       | \-     | \-     |
+| Retravailler le système D100 en m'inspirant d'Aria                     | \-     | \-     |
+| Un jeu de gestion avec le point de vue bébé et le point de vue parents | \-     | \-     |
+| Un parc d'attraction hanté ou abandonné dans un jeu de role            | \-     | \-     |
+| Faire une liste de mes limites                                         | \-     | \-     |
+| Revoir - 1 - La prise de notes pour la formation PKM                   | \-     | \-     |
+| Faire un bilan professionnel, et voir l'avenir sur les 5 horizon gtd   | \-     | \-     |
+| Créer et vendre une formation Obsidian                                 | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File                                                            | rating | review                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| --------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [[Sources/Ce que j'ai testé/Fleeting Notes\|Fleeting Notes]] | 🟢     | En cours de test, un logiciel qui sur la partie mobile est beaucoup plus réactif qu'Obsidian pour faire des capture. Par contre je dois revoir la façon dont j'organise ma Vault Obsidian et je dois réfléchir à savoir si je synchronise dans un sens ou les deux. Bref en résolvant mon probleme de fluidité de capture je me pose du coup pas mal de question de comment intégrer cette capture pour qu'elle soit opérationnelle. |
+| file.name      | rating | source                                           |
+| -------------- | ------ | ------------------------------------------------ |
+| Fleeting Notes | 🟢     | <ul><li>https://www.fleetingnotes.app/</li></ul> |
 
 { .block-language-dataview}
 
@@ -79,10 +79,8 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                            | rating | review                                                                                                                                                                                                                                                                                   |
-| ------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce à quoi j'ai joué/Terra Nil — Wikipédia\|Terra Nil — Wikipédia]] | 🟢     | Chill, reposant, compris dans l'abonnement Netflix, ce petit jeu m'a tenue compagnie dans mes trajets en train des dernières semaines. Problème ça bouffe quand même la batterie de mon téléphone, mais c'est un jeu de gestion tranquille et cosy qui donne envie de se plonger dedans. |
+| file.name             | rating | source                                                      |
+| --------------------- | ------ | ----------------------------------------------------------- |
+| Terra Nil — Wikipédia | 🟢     | <ul><li>https://fr.m.wikipedia.org/wiki/Terra_Nil</li></ul> |
 
 { .block-language-dataview}
-
-
