--- a/src/site/notes/Calendrier/Semaines/2024-23.md
+++ b/src/site/notes/Calendrier/Semaines/2024-23.md
@@ -10,18 +10,20 @@
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                   | rating | review                                                                                                                                                                                                                                                                                                                            |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/001 Game Creator Game Engine in 2024 - Is It Any Good [Currently on Humble]\|001 Game Creator Game Engine in 2024 - Is It Any Good [Currently on Humble]]] | 🟢     | Article intéressant autour de ce moteur de jeu. Au final je pense que pour le type de jeu que j'ai en tête ce moteur ne va pas convenir à ce que je veux et ce que j'ai déjà vu (comme Adventure Game Studio)                                                                                                                     |
-| [[Sources/Ce que j'ai vu/Gloutons et Dragons\|Gloutons et Dragons]]                                                                                                                 | 🟢     | Halalalala cette fin de saison ! Vivement la suite !                                                                                                                                                                                                                                                                              |
-| [[Sources/Ce que j'ai vu/Jigokuraku\|Jigokuraku]]                                                                                                                                   | 🟢     | Un animé assez sympa si on aime les animés de combat. Je trouve que l'histoire est intéressante et le contexte dans une ile étrange avec des dieux déformés et des religions tordues donne pas mal d'inspiration pour des jeux de rôle et jeux vidéos.                                                                            |
-| [[Sources/Ce que j'ai vu/Mulligan\|Mulligan]]                                                                                                                                       | 🟢     | Une série assez fun et marrante sur un scénario post apo après une attaque alien. C'est débile, très drôle et ça vide bien la tête.                                                                                                                                                                                               |
-| [[Sources/Ce que j'ai vu/Onmyôji Celui qui parle aux démons\|Onmyôji Celui qui parle aux démons]]                                                                                   | 🟢     | <ul><li>Pour l'instant une belle découverte plutôt poétique. Une histoire d'exorciste en asie médiévale.</li><li>Une série animé très calme et en plein dans le folklore asiatique, c'est très intéressant, la façon de voir les démons, la façon dont sont envisagés les exorcismes, et l'histoire est sympa à suivre.</li></ul> |
-| [[Sources/Ce que j'ai vu/Talend ESB Rest Api service Fundamentals\|Talend ESB Rest Api service Fundamentals]]                                                                       | 🟢     | Une révision sur l'utilisation des routes Camel dans Talend pour monter des endpoint en REST. Je vous ai perdu ? Bon, j'avais juste besoin de réviser pour me rappeler comment faire des web service à destination de l'extérieur.                                                                                                |
+| file.name                                                                   | rating | source                                                                             |
+| --------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------- |
+| 001 Game Creator Game Engine in 2024 - Is It Any Good [Currently on Humble] | 🟢     | https://www.youtube.com/watch?v=9zA0Y2kalE0&amp;t=14s                              |
+| Gloutons et Dragons                                                         | 🟢     | <ul><li>https://c3po.link/Qde65C7WMN</li></ul>                                     |
+| Jigokuraku                                                                  | 🟢     | <ul><li>https://www.cultura.com/p-hell-s-paradise-t-1-9782820335326.html</li></ul> |
+| Mulligan                                                                    | 🟢     | \-                                                                                 |
+| Onmyôji Celui qui parle aux démons                                          | 🟢     | <ul><li>https://www.imdb.com/title/tt22264252/</li></ul>                           |
+| Talend ESB Rest Api service Fundamentals                                    | 🟢     | https://www.youtube.com/watch?v=XJAIHlVJSiw                                        |
 
 { .block-language-dataview}
 
@@ -29,13 +31,13 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                                                                                                       | rating | review                                                                                                                                                                                                                                                          |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Dense Discovery – Issue 291\|Dense Discovery – Issue 291]]                                                                                                                                     | 🟢     | Pas grand chose cette semaine, car l'auteur est en vacances :)                                                                                                                                                                                                  |
-| [[Sources/Ce que j'ai lu/Dimension à évolution lente — Wikipédia\|Dimension à évolution lente — Wikipédia]]                                                                                                             | 🟢     | Révision autour de l'idée des dimensions à évolution lente sur une base de donnée.                                                                                                                                                                              |
-| [[Sources/Ce que j'ai lu/How to track progress and stay motivated in research\|How to track progress and stay motivated in research]]                                                                                   | 🟢     | Un sujet intéressant dans cette newsletter. Comment rester motivé, comment obtenir un sentiment d'accomplissement lorsque l'on avance sur un projet ou sur des tâches.                                                                                          |
-| [[Sources/Ce que j'ai lu/La mythologie celtique - Christian Léourier\|La mythologie celtique - Christian Léourier]]                                                                                                     | 🟢     | Un petit livre assez sympathique sur la mythologie Irlandaise et les différents peuples légendaire qui ont peuplé l'ile, leurs relations entre eux, les actes magiques et vengeance, plutôt intéressant.                                                        |
-| [[Sources/Ce que j'ai lu/Oracle Database  Comment retrouver la date et l’heure de modification d’une donnée - EASYTEAM\|Oracle Database  Comment retrouver la date et l’heure de modification d’une donnée - EASYTEAM]] | 🟢     | Il arrive qu'à la suite d'un incident applicatif, il soit nécessaire de retrouver toutes les lignes modifiées depuis un instant T. Ici nous avons plusieurs façon de le faire dans le SGBD Oracle. Soit par bloc, soit carrément à la ligne par dernier commit. |
+| file.name                                                                                     | rating | source                                                                  |
+| --------------------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------- |
+| Dense Discovery – Issue 291                                                                   | 🟢     | https://www.densediscovery.com/issues/291                               |
+| Dimension à évolution lente — Wikipédia                                                       | 🟢     | https://fr.wikipedia.org/wiki/Dimension_%C3%A0_%C3%A9volution_lente     |
+| How to track progress and stay motivated in research                                          | 🟢     | \-                                                                      |
+| La mythologie celtique - Christian Léourier                                                   | 🟢     | \-                                                                      |
+| Oracle Database  Comment retrouver la date et l’heure de modification d’une donnée - EASYTEAM | 🟢     | https://easyteam.fr/oracle-db-retrouver-date-heure-modification-donnee/ |
 
 { .block-language-dataview}
 
@@ -43,17 +45,17 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                                                                                                                                                               | rating | review                                                                                                                                                                                                                                                                                            |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic\|Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic]]                                                                                                                                         | 🟢     | Histoire complètement hallucinante que je ne connaissais pas. L'enchainement d'évènement suite à cette dick pick est juste incroyable, on dirait un film.                                                                                                                                         |
-| [[Sources/Ce que j'ai écouté/Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic  - Podcast Addict\|Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic  - Podcast Addict]]                                                                                                     | 🟢     | Histoire complètement hallucinante que je ne connaissais pas. L'enchainement d'évènement suite à cette dick pick est juste incroyable, on dirait un film.                                                                                                                                         |
-| [[Sources/Ce que j'ai écouté/Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 1 - Podcast Addict\|Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 1 - Podcast Addict]]                                                                                                                                               | 🟢     | Très bon sujet et très bon partage de ressource pour la création dans le jeu de rôle. Le domaine public regorge de bonnes choses à utiliser et découvrir.                                                                                                                                         |
-| [[Sources/Ce que j'ai écouté/Les Échos d'Arkham - Les mystères d'Arkham - On continue la visite\|Les Échos d'Arkham - Les mystères d'Arkham - On continue la visite]]                                                                                                                                                                                                                           | 🟢     | épisode très sympa ou l'on se balade de nouveau dans Arkham. Ça manque peu être un peu de fil rouge, d'un thème à la balade, mais c'est assez cool de suivre les déambulations dans les rues d'Arkham.                                                                                            |
-| [[Sources/Ce que j'ai écouté/Les Échos dArkham - Les mystères dArkham  On continue la visite - Podcast Addict\|Les Échos dArkham - Les mystères dArkham  On continue la visite - Podcast Addict]]                                                                                                                                                                                               | 🟢     | épisode très sympa ou l'on se balade de nouveau dans Arkham. Ça manque peu être un peu de fil rouge, d'un thème à la balade, mais c'est assez cool de suivre les déambulations dans les rues d'Arkham.                                                                                            |
-| [[Sources/Ce que j'ai écouté/POURQUOI BUFFY C EST GENIAL - PBCG HORS SÉRIE STORYTELLER EN PUBLIC - Podcast Addict\|POURQUOI BUFFY C EST GENIAL - PBCG HORS SÉRIE STORYTELLER EN PUBLIC - Podcast Addict]]                                                                                                                                                                                       | 🟢     | Ça faisait longtemps et c'est très cool de réécouter l'équipe de PBCG surtout lors d'un live en convention. En plus l'épisode choisi est vraiment très cool.                                                                                                                                      |
-| [[Sources/Ce que j'ai écouté/Tech Rōnins - L’art du coaching inter-culturel, avec Stéphanie Devel - Podcast Addict\|Tech Rōnins - L’art du coaching inter-culturel, avec Stéphanie Devel - Podcast Addict]]                                                                                                                                                                                     | 🟢     | Je m'étais dit que cet épisode n'allait pas me parler au début et au final ça me parle pas mal. Je suis souvent confronté au même genre de problème dans mon travail avec des cultures de travail différente suivant les nationalités des gens et j'ai trouvé certains conseils assez pertinents. |
-| [[Sources/Ce que j'ai écouté/Build Yourself - 14 micro-habitudes pour améliorer sa vie\|Build Yourself - 14 micro-habitudes pour améliorer sa vie]]                                                                                                                                                                                                                                             | 🟡     | \-                                                                                                                                                                                                                                                                                                |
-| [[Sources/Ce que j'ai écouté/Intelligence Artificielle - Data Driven 101 - Le podcast IA & Data 100% en français - La Data et l’IA au service du bien commun - Ronan Sy (responsable projet @ Data for Good)\|Intelligence Artificielle - Data Driven 101 - Le podcast IA & Data 100% en français - La Data et l’IA au service du bien commun - Ronan Sy (responsable projet @ Data for Good)]] | 🟡     | Sujet plutôt intéressant sur la façon dont foctnionne l'association Data for Good, ce qu'elle fait et le type d'association qu'elle accompagne. Ce genre de projet mérite un coup de projecteur.                                                                                                  |
+| file.name                                                                                                                                                                       | rating | source                                                                                                                   |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------ |
+| Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic                                                                     | 🟢     | https://podcastaddict.com/arnaques-crimes-et-putaclic/episode/177192405                                                  |
+| Arnaques, crimes et putaclic - Anthony Weiner, l’homme qui a fait élire Donald Trump à cause d’une dick pic  - Podcast Addict                                                   | 🟢     | https://podcastaddict.com/arnaques-crimes-et-putaclic/episode/177192405                                                  |
+| Coup Critique - CONSEIL JDR  Le domaine public dans le jeu de rôle sur table - Partie 1 - Podcast Addict                                                                        | 🟢     | https://podcastaddict.com/coup-critique/episode/176942231                                                                |
+| Les Échos d'Arkham - Les mystères d'Arkham - On continue la visite                                                                                                              | 🟢     | https://podcastaddict.com/les-echos-d-arkham/episode/177115591                                                           |
+| Les Échos dArkham - Les mystères dArkham  On continue la visite - Podcast Addict                                                                                                | 🟢     | https://podcastaddict.com/les-echos-d-arkham/episode/177115591                                                           |
+| POURQUOI BUFFY C EST GENIAL - PBCG HORS SÉRIE STORYTELLER EN PUBLIC - Podcast Addict                                                                                            | 🟢     | https://podcastaddict.com/pourquoi-buffy-c-est-genial/episode/176892281                                                  |
+| Tech Rōnins - L’art du coaching inter-culturel, avec Stéphanie Devel - Podcast Addict                                                                                           | 🟢     | https://podcastaddict.com/tech-ronins/episode/176860761                                                                  |
+| Build Yourself - 14 micro-habitudes pour améliorer sa vie                                                                                                                       | 🟡     | https://podcastaddict.com/build-yourself/episode/177226163                                                               |
+| Intelligence Artificielle - Data Driven 101 - Le podcast IA & Data 100% en français - La Data et l’IA au service du bien commun - Ronan Sy (responsable projet @ Data for Good) | 🟡     | https://podcastaddict.com/intelligence-artificielle-data-driven-101-le-podcast-ia-data-100-en-francais/episode/177094360 |
 
 { .block-language-dataview}
 
@@ -61,16 +63,16 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                                                                                            | date       | status |
-| ------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
-| [[Projects/Ceux qui luttaient dans les ténèbres/Ceux qui luttaient dans les ténèbres\|Ceux qui luttaient dans les ténèbres]] | 2023-12-12 | \-     |
+| file.name                            | rating | source |
+| ------------------------------------ | ------ | ------ |
+| Ceux qui luttaient dans les ténèbres | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -78,9 +80,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
-
-
