--- a/src/site/notes/Calendrier/Semaines/2024-29.md
+++ b/src/site/notes/Calendrier/Semaines/2024-29.md
@@ -5,31 +5,34 @@
 
 # Cette semaine : 2024 - Semaine 29 : Ou l'on parle de point and click
 
+
 ## Introduction
 
 > [!check] Punchline
 > ##### Votre newsletter audio qui vous partage des médias et infos tech à découvrir pour passer une bonne semaine
 
+
+
 ## Segment 1 & 2 : Cinéma & Séries TV
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| File                                                                                                                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai vu/10 Minute Pixel Sprite TUTORIAL for COMPLETE BEGINNERS\|10 Minute Pixel Sprite TUTORIAL for COMPLETE BEGINNERS]]                                                                                         | 🟢     | Une vidéo que j'ai trouvé très sympa sur les bases pour commencer le pixel art.                                                                                                                                                                                                                                                       |
-| [[Sources/Ce que j'ai vu/blackthornprod - How to make 2D Game Art (my simple process)\|blackthornprod - How to make 2D Game Art (my simple process)]]                                                                             | 🟢     | j'ai adoré cette vidéo, ce style visuel et les explications pour le créer, j'ai vraiment trouvé que c'était une super idée et de super graphisme.                                                                                                                                                                                     |
-| [[Sources/Ce que j'ai vu/blackthornprod - HOW TO MAKE A 2D GAME CHARACTER - TUTORIAL\|blackthornprod - HOW TO MAKE A 2D GAME CHARACTER - TUTORIAL]]                                                                               | 🟢     | \-                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai vu/Exploding Kittens (TV series) - Wikipedia\|Exploding Kittens (TV series) - Wikipedia]]                                                                                                                   | 🟢     | j'ai bingé cette série, c'est assez drôle, un peu vulgaire, mais sympa, par contre ça n'a pas grand-chose à voir avec le jeu.                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai vu/GENIUS trick for weekly reviews - YouTube\|GENIUS trick for weekly reviews - YouTube]]                                                                                                                   | 🟢     | Un conseil intéressant autour du PKM et de la weekly review, de bien penser à écrire au fur et à mesure comme si on s'adressait à quelqu'un d'autre afin de pouvoir revenir plus facilement sur ses notes et ses pensées dans le futur. Comme pour le code informatique : imaginez-vous l'écrire pour votre vous e dans 6 ou 12 mois. |
-| [[Sources/Ce que j'ai vu/pointandclickd - Game backdrop art livestream - DEVLOG 7\|pointandclickd - Game backdrop art livestream - DEVLOG 7]]                                                                                     | 🟢     | J'aime bien ce que fait le Point and Click dev blog, et j'ai hâte de voir à quoi ressemble son jeu terminé, en tout cas cela me donne pas mal d'idées.                                                                                                                                                                                |
-| [[Sources/Ce que j'ai vu/pointandclickd - Pixel art tutorial point & click game backdrops - DEVLOG 3\|pointandclickd - Pixel art tutorial point & click game backdrops - DEVLOG 3]]                                               | 🟢     | \-                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai vu/SQH - Adventure Game Studio Tutorial Episode 1, Part 3 A Finished Game! (Sort of)\|SQH - Adventure Game Studio Tutorial Episode 1, Part 3 A Finished Game! (Sort of)]]                                   | 🟢     | J'ai pas mal poncé les vidéos de la chaine du Space Quest Historian autour des tutoriaux de Adventure Games Studio, c'est sympa et ça donne vraiment une bonne idée de comment marche ce moteur de jeu.                                                                                                                               |
-| [[Sources/Ce que j'ai vu/SQH - Adventure Game Studio Tutorial Episode 2 (Basic) Dialogues and Embarrassing Failures\|SQH - Adventure Game Studio Tutorial Episode 2 (Basic) Dialogues and Embarrassing Failures]]                 | 🟢     | \-                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai vu/SQH - HOW TO QUICKLY MAKE A 1ST PERSON FMV GAME  Adventure Game Studio Quick Tutorial 2\|SQH - HOW TO QUICKLY MAKE A 1ST PERSON FMV GAME  Adventure Game Studio Quick Tutorial 2]]                       | 🟢     | Encore d'autre diée sur des façon de faire un jeu avec AGS.                                                                                                                                                                                                                                                                           |
-| [[Sources/Ce que j'ai vu/SQH - HOW TO QUICKLY MAKE A SIERRALUCASARTS ADVENTURE GAME  Adventure Game Studio Quick Tutorial 1\|SQH - HOW TO QUICKLY MAKE A SIERRALUCASARTS ADVENTURE GAME  Adventure Game Studio Quick Tutorial 1]] | 🟢     | \-                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai vu/Suicide Squad Isekai\|Suicide Squad Isekai]]                                                                                                                                                             | 🟢     | Super série, l'univers de DC en animé avec des personnages bien décalé, c'est très bon.                                                                                                                                                                                                                                               |
-| [[Sources/Ce que j'ai vu/SQH - BEHOLD - AN ARTIST  Teaching TorpedoBear AGS pt. 1\|SQH - BEHOLD - AN ARTIST  Teaching TorpedoBear AGS pt. 1]]                                                                                     | 🟡     | \-                                                                                                                                                                                                                                                                                                                                    |
-| [[Sources/Ce que j'ai vu/Adventure Game Studio Tutorials Puzzle Charts (V-Log 6)\|Adventure Game Studio Tutorials Puzzle Charts (V-Log 6)]]                                                                                       | 🔴     | Je n'ai pas du tout accroché cette vidéo autour d'Adventure Game Studio, je la trouve assez dénuée d'intérêt.                                                                                                                                                                                                                         |
+| file.name                                                                                          | rating | source                                                                                              |
+| -------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------- |
+| 10 Minute Pixel Sprite TUTORIAL for COMPLETE BEGINNERS                                             | 🟢     | <ul><li>https://www.youtube.com/watch?v=mBt3UuLJx9Y</li></ul>                                       |
+| blackthornprod - How to make 2D Game Art (my simple process)                                       | 🟢     | https://www.youtube.com/watch?v=QE1D5tF7u3A                                                         |
+| blackthornprod - HOW TO MAKE A 2D GAME CHARACTER - TUTORIAL                                        | 🟢     | https://www.youtube.com/watch?v=9oiz1pectr8&amp;list=PLBIb_auVtBwBzY820L_LFnlK8v_V3Avxc             |
+| Exploding Kittens (TV series) - Wikipedia                                                          | 🟢     | https://en.wikipedia.org/wiki/Exploding_Kittens_(TV_series)                                         |
+| GENIUS trick for weekly reviews - YouTube                                                          | 🟢     | https://www.youtube.com/shorts/TdQCEKN7IvY                                                          |
+| pointandclickd - Game backdrop art livestream - DEVLOG 7                                           | 🟢     | https://www.youtube.com/watch?v=Yj3E-0xOCyI                                                         |
+| pointandclickd - Pixel art tutorial point & click game backdrops - DEVLOG 3                        | 🟢     | https://www.youtube.com/watch?v=M2onvCkJ2SM                                                         |
+| SQH - Adventure Game Studio Tutorial Episode 1, Part 3 A Finished Game! (Sort of)                  | 🟢     | https://www.youtube.com/watch?v=J0QwrdbnYtw                                                         |
+| SQH - Adventure Game Studio Tutorial Episode 2 (Basic) Dialogues and Embarrassing Failures         | 🟢     | https://www.youtube.com/watch?v=o1Z-13Y0o1I&amp;list=PLeuPHRWonRSQweIZ06N-6UmyZ0StBgLtq&amp;index=4 |
+| SQH - HOW TO QUICKLY MAKE A 1ST PERSON FMV GAME  Adventure Game Studio Quick Tutorial 2            | 🟢     | https://www.youtube.com/watch?v=5xj21_HSWrU&amp;list=PLeuPHRWonRSQweIZ06N-6UmyZ0StBgLtq&amp;index=6 |
+| SQH - HOW TO QUICKLY MAKE A SIERRALUCASARTS ADVENTURE GAME  Adventure Game Studio Quick Tutorial 1 | 🟢     | https://www.youtube.com/watch?v=-tPhIeMF4Cs&amp;list=PLeuPHRWonRSQweIZ06N-6UmyZ0StBgLtq&amp;index=7 |
+| Suicide Squad Isekai                                                                               | 🟢     | <ul><li>https://fr.wikipedia.org/wiki/Suicide_Squad_Isekai</li></ul>                                |
+| SQH - BEHOLD - AN ARTIST  Teaching TorpedoBear AGS pt. 1                                           | 🟡     | https://www.youtube.com/watch?v=6007RYFDoA8&amp;list=PLeuPHRWonRSQweIZ06N-6UmyZ0StBgLtq&amp;index=7 |
+| Adventure Game Studio Tutorials Puzzle Charts (V-Log 6)                                            | 🔴     | https://www.youtube.com/watch?v=7-j36CPsyMc                                                         |
 
 { .block-language-dataview}
 
@@ -37,12 +40,12 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| File                                                                                                                                 | rating | review                                                                                                                                                                                                                                                                                                                                                                    |
-| ------------------------------------------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai lu/Lettre ouverte aux Pledgers - Monolith Board Games\|Lettre ouverte aux Pledgers - Monolith Board Games]] | 🟢     | Une explication intéressante sur les Kickstarter et la façon dont les boîtes travaillent pour gérer les campagnes de financements.                                                                                                                                                                                                                                        |
-| [[Sources/Ce que j'ai lu/Puzzle Dependency Charts\|Puzzle Dependency Charts]]                                                     | 🟢     | Un très bon post sur les puzzle chart pour gérer les jeux de type Adventure Game.                                                                                                                                                                                                                                                                                         |
-| [[Sources/Ce que j'ai lu/Why Adventure Games Suck\|Why Adventure Games Suck]]                                                     | 🟢     | Un article écrit en 2004 sur les pratiques que Ron Gilbert avait 15 ans plus tôt pour la création de jeu. Je suis curieux de voir si 20 ans après l'écriture de cet article son point de vue à évoluer. Je lui poserai la question, je pense. En tout cas les réflexions sont intéressantes. On y trouve un tas de conseil pour justement mieux gérer les Adventure Game. |
-| [[Sources/Ce que j'ai lu/Data News — Week 24.28\|Data News — Week 24.28]]                                                         | \-     | \-                                                                                                                                                                                                                                                                                                                                                                        |
+| file.name                                          | rating | source                                                             |
+| -------------------------------------------------- | ------ | ------------------------------------------------------------------ |
+| Lettre ouverte aux Pledgers - Monolith Board Games | 🟢     | https://monolithedition.com/lettre-ouverte-aux-pledgers/           |
+| Puzzle Dependency Charts                           | 🟢     | https://grumpygamer.com/puzzle_dependency_charts                   |
+| Why Adventure Games Suck                           | 🟢     | https://grumpygamer.com/why_adventure_games_suck                   |
+| Data News — Week 24.28                             | \-     | https://www.blef.fr/data-news-week-24-28/?ref=data-news-newsletter |
 
 { .block-language-dataview}
 
@@ -50,11 +53,11 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| File                                                                                                                                                                                                                                                                                                                         | rating | review                                                                                                                                                                                                                                                                            |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce que j'ai écouté/Coup Critique - TOP 5 JDR  5 jeux de rôle pour émuler lunivers de Fallout - Podcast Addict\|Coup Critique - TOP 5 JDR  5 jeux de rôle pour émuler lunivers de Fallout - Podcast Addict]]                                                                                                     | 🟢     | Un épisode très intéressant sur des jeux post apo qui pourraient remplacer Fallout, je l'ai partagé aux copains de la jdr academy qui sont justement sur une campagne de Fallout 2d20 mais qui semblaient avoir quelques doutes sur le système.                                   |
-| [[Sources/Ce que j'ai écouté/Éviter les crises à lheure du souper\|Éviter les crises à lheure du souper]]                                                                                                                                                                                                                 | 🟢     | Podcast Québécois autour de la parentalité et dans cet épisode les crise pendant le repas du soir avec un enfant de 2 à 3 ans. J'ai personnellement retrouvé pas mal de chose et j'ai vraiment hâte d'essayer de mettre en pratique les conseils voir si les choses s'améliorent. |
-| [[Sources/Ce que j'ai écouté/Digital Learning Makers - Digital Learning Makers 42 LIVE - Une Consultante Donne Les Clés Dun Parcours De Formation Réussi - Podcast Addict\|Digital Learning Makers - Digital Learning Makers 42 LIVE - Une Consultante Donne Les Clés Dun Parcours De Formation Réussi - Podcast Addict]] | \-     | \-                                                                                                                                                                                                                                                                                |
+| file.name                                                                                                                                    | rating | source                                                                                                               |
+| -------------------------------------------------------------------------------------------------------------------------------------------- | ------ | -------------------------------------------------------------------------------------------------------------------- |
+| Coup Critique - TOP 5 JDR  5 jeux de rôle pour émuler lunivers de Fallout - Podcast Addict                                                   | 🟢     | https://podcastaddict.com/coup-critique/episode/175681361                                                            |
+| Éviter les crises à lheure du souper                                                                                                         | 🟢     | https://open.spotify.com/episode/3WNVqNOXvE9rKZyKnr3o4K?si=PcJYPuAmRB2xQMqVPQlaDw&amp;nd=1&amp;dlsi=5d97b7e913884b11 |
+| Digital Learning Makers - Digital Learning Makers 42 LIVE - Une Consultante Donne Les Clés Dun Parcours De Formation Réussi - Podcast Addict | \-     | https://podcastaddict.com/digital-learning-makers/episode/179334496                                                  |
 
 { .block-language-dataview}
 
@@ -62,16 +65,16 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| File                                                   | date       | status |
-| ------------------------------------------------------ | ---------- | ------ |
-| [[01.Projets/JDR.MOTW.Warabouc/Warabouc\|Warabouc]] | 2023-12-12 | \-     |
+| file.name | rating | source |
+| --------- | ------ | ------ |
+| Warabouc  | \-     | \-     |
 
 { .block-language-dataview}
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| File | rating | review |
-| ---- | ------ | ------ |
+| file.name | rating | source |
+| --------- | ------ | ------ |
 
 { .block-language-dataview}
 
@@ -79,11 +82,9 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| File                                                                                                                  | rating | review                                                                                                                                                                                                                             |
-| --------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [[Sources/Ce à quoi j'ai joué/Adventures With Anxiety! by Nicky Case!\|Adventures With Anxiety! by Nicky Case!]]   | 🟢     | Un jeu, une fiction interactive, on va dire autour de la gestion de l'anxiété du stress et de la dépression, c'est vraiment bien fait et ça en prend que 15 minutes et jouable dans le navigateur pas d'excuse pour passer à côté. |
-| [[Sources/Ce à quoi j'ai joué/Theres Something in the Pipes by Falsely\|Theres Something in the Pipes by Falsely]] | 🟢     | un jeu, court, sur navigateur qui est juste excellent, l'ambiance, l'histoire la façon de gérer les chose, les personnages, les graphismes. J'ai adoré.                                                                            |
+| file.name                                | rating | source                                |
+| ---------------------------------------- | ------ | ------------------------------------- |
+| Adventures With Anxiety! by Nicky Case!  | 🟢     | https://ncase.itch.io/anxiety         |
+| Theres Something in the Pipes by Falsely | 🟢     | https://falselyprofound.itch.io/pipes |
 
 { .block-language-dataview}
-
-
